--- a/extensions/SemanticResultFormats/i18n/de.json
+++ b/extensions/SemanticResultFormats/i18n/de.json
@@ -49,7 +49,8 @@
 	"srf-ui-widgets-label-parameter-limit": "Begrenzungsparameter",
 	"srf-error-option-mix": "Option ($1) ist nicht verfügbar",
 	"srf-error-option-link-all": "Zur Option ($1) muss beim Paramenter „link“ der Wert „all“ gesetzt werden.",
-	"srf-error-missing-layout": "Es wurde kein Layout angegeben.",
+	"srf-error-missing-layout": "Das Diagramm oder die Grafik kann nicht angezeigt werden, da das Layout fehlt.",
+	"srf-error-jqplot-stackseries-data-length": "Das Diagramm oder die Grafik kann nicht angezeigt werden, da nicht jeder Balken oder nicht jede Linie die gleiche Elementanzahl aufweist.",
 	"srf-warn-empy-chart": "Es konnte kein Diagramm / keine Grafik erstellt werden, da keine ausreichenden Daten zum Erstellen vorhanden waren.",
 	"srfc_previousmonth": "Voriger Monat",
 	"srfc_nextmonth": "Nächster Monat",
@@ -58,6 +59,8 @@
 	"srf_printername_calendar": "Zeit (Kalender)",
 	"srf_paramdesc_calendarlang": "Der Sprachcode der Sprache, in der der Kalender angezeigt werden soll",
 	"srf_paramdesc_calendarcolors": "Die für das jeweilige Datumsattribut zur Darstellung zu verwendende Farbe (Beispiel: „Startdatum=>green,Enddatum=>#09C“)",
+	"srf-paramdesc-calendar-startmonth": "Der Monat, der im Kalender zunächst angezeigt wird (Standard ist der aktuelle Monat)",
+	"srf-paramdesc-calendar-startyear": "Das Jahr, das im Kalender zunächst angezeigt wird (Standard ist das aktuelle Jahr)",
 	"srf_printername_vcard": "Export (vCard)",
 	"srf_printername_icalendar": "Export (iCalendar)",
 	"srf_paramdesc_icalendartitle": "Der Name für die Kalenderdatei",
@@ -122,6 +125,7 @@
 	"srf-paramdesc-chartcursor": "Die Option zur Anzeige des Cursors in der Grafik",
 	"srf-paramdesc-trendline": "Das gleichzeitige Anzeigen des Diagramms und der Trendlinie aktivieren",
 	"srf-paramdesc-gridview": "Das Diagramm und die Datensätze simultan anzeigen. Mögliche Parameterwerte: „none“ und „tabs“. Standardwert: „none“",
+	"srf-paramdesc-paneview": "Die Position des Fensters, das ein kleines Liniendiagramm enthält. Mögliche Werte: „bottom“, „top“ und „none“. Standardwert: „bottom“",
 	"srf-paramdesc-infotext": "Die zusätzlichen Informationen auf dem entsprechenden Inforeiter anzeigen",
 	"srf-ui-gridview-label-item": "Datenelement",
 	"srf-ui-gridview-label-value": "Datenwert",
@@ -231,6 +235,7 @@
 	"srf-paramdesc-filtered-calendar-title": "Die Ausgabe, die den Titel einer Veranstaltung enthält. Kann nicht zusammen mit einer Vorlage zur Ausgabe des Titels verwendet werden",
 	"srf-paramdesc-filtered-calendar-title-template": "Die Vorlage, die den Titel einer Veranstaltung enthält",
 	"srf-filtered-selectorlabel-list": "Liste",
+	"srf-filtered-selectorlabel-table": "Tabelle",
 	"srf-filtered-selectorlabel-calendar": "Kalender",
 	"srf-printername-d3chart": "Diagramm (D3)",
 	"srf-printername-timeseries": "Diagramm (Zeitreihe)",
