--- a/extensions/SemanticResultFormats/i18n/diq.json
+++ b/extensions/SemanticResultFormats/i18n/diq.json
@@ -16,7 +16,7 @@
 	"srf-ui-tooltip-title-scope": "Şımul",
 	"srfc_previousmonth": "Aşma verên",
 	"srfc_nextmonth": "Aşma bahdoyên",
-	"srfc_today": "Noroc",
+	"srfc_today": "Ewro",
 	"srfc_gotomonth": "Şo aşmêr",
 	"srf_printername_calendar": "Teqwimê Aşmekan",
 	"srf_outline_novalue": "Erc çıno",
@@ -34,7 +34,7 @@
 	"srf_printername_tree": "Dar",
 	"srf_printername_ultree": "Ultree",
 	"srf_printername_oltree": "Oltree",
-	"srf-printername-slideshow": "Slaytşow",
+	"srf-printername-slideshow": "Slaydşow",
 	"srf-ui-eventcalendar-label-today": "Ewro",
 	"srf-ui-eventcalendar-label-month": "Aşme",
 	"srf-ui-eventcalendar-label-week": "Hefte",
