--- a/extensions/SemanticResultFormats/i18n/fr.json
+++ b/extensions/SemanticResultFormats/i18n/fr.json
@@ -16,17 +16,20 @@
 			"PieRRoMaN",
 			"Tititou36",
 			"Urhixidur",
-			"Verdy p"
+			"Verdy p",
+			"SnowedEarth",
+			"Wladek92",
+			"Macofe"
 		]
 	},
 	"srf-desc": "Formats  additionnels d'affichage de résultat pour les requêtes de Semantic MediaWiki",
 	"srf-name": "Formatage des résultats sémantiques",
 	"prefs-srf": "Formats des résultats sémantiques",
 	"srf-prefs-intro-text": "Vous avez installé l'extension Formats de résultats sémantiques qui, pour l'instant, n'a pas d'option paramétrable par l'utilisateur. Pour plus d’aide, veuillez regarder la page d'aide [https://www.semantic-mediawiki.org/wiki/Help:Result_formats formats de résultat].",
-	"prefs-srf-eventcalendar-options": "Options {{INT:Srf-printername-eventcalendar}}",
+	"prefs-srf-eventcalendar-options": "Options de calendrier d'événements",
 	"srf-prefs-eventcalendar-options-update-default": "Activer les [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates mises à jour automatiques] des événements du calendrier lors d’un rafraîchissement de page",
 	"srf-prefs-eventcalendar-options-paneview-default": "Activer l’affichage du volet par défaut",
-	"prefs-srf-datatables-options": "Options {{INT:srf-printername-datatables}}",
+	"prefs-srf-datatables-options": "Options des plages de données",
 	"srf-prefs-datatables-options-update-default": "Activer les [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates mises à jour automatiques] de la table des matières lors du rafraîchissement d’une page",
 	"srf-prefs-datatables-options-cache-default": "Activer le [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage stockage local] pour améliorer les temps de réponse",
 	"srf-module-loading": "Chargement...",
@@ -56,7 +59,8 @@
 	"srf-ui-widgets-label-parameter-limit": "Limiter le paramètre",
 	"srf-error-option-mix": "L'option ($1) n'est pas disponible",
 	"srf-error-option-link-all": "L'option ($1) nécessite le paramètre \"link\" pour être mise à \"all\"",
-	"srf-error-missing-layout": "Mise en page manquante",
+	"srf-error-missing-layout": "Le diagramme ou le graphique ne peut être affiché car la mise en page manque.",
+	"srf-error-jqplot-stackseries-data-length": "Le diagramme ou le graphique ne peut être affiché car chaque barre ou ligne n’a pas le même nombre d’éléments.",
 	"srf-warn-empy-chart": "Le graphique est vide en raison de données manquantes",
 	"srfc_previousmonth": "Mois précédent",
 	"srfc_nextmonth": "Mois suivant",
@@ -65,6 +69,8 @@
 	"srf_printername_calendar": "Calendrier mensuel",
 	"srf_paramdesc_calendarlang": "Le code de la langue dans laquelle afficher le calendrier",
 	"srf_paramdesc_calendarcolors": "La couleur à afficher pour chaque propriété date (exemple: \"Date de démarrage => green,Date de fin => #09c\")",
+	"srf-paramdesc-calendar-startmonth": "Le mois, avec lequel l'affichage du calendrier est initialisé (par défaut, le mois courant)",
+	"srf-paramdesc-calendar-startyear": "L'année avec laquelle l'affichage de calendrier est initialisé (par défaut, l'année en cours)",
 	"srf_vcard_link": "vCarte",
 	"srf_printername_vcard": "export en vCard",
 	"srf_icalendar_link": "iCalendrier",
@@ -131,6 +137,7 @@
 	"srf-paramdesc-chartcursor": "Option d'affichage du curseur de diagramme",
 	"srf-paramdesc-trendline": "Active l'affichage simultané d'un diagramme et de sa tendance",
 	"srf-paramdesc-gridview": "Afficher le diagramme et les ensembles de données en même temps. Valeurs autorisées: « none » et « tabs ». Par défaut: « none »",
+	"srf-paramdesc-paneview": "Spécifier la position du panneau contenant un petit graphique en lignes. Valeurs permises : « bottom » (bas), « top » (haut) et « none » (aucun). Par défaut : « bottom »",
 	"srf-paramdesc-infotext": "Afficher les informations supplémentaires sur un tableau d'information correspondant",
 	"srf-ui-gridview-label-item": "Élément de donnée",
 	"srf-ui-gridview-label-value": "Valeur de donnée",
@@ -240,6 +247,7 @@
 	"srf-paramdesc-filtered-calendar-title": "L'imprimé contenant le titre d'un événement. Ne peux pas être utilisé en même temps qu'un modèle de titre.",
 	"srf-paramdesc-filtered-calendar-title-template": "Un modèle utilisé pour mettre en forme le titre de l'événement dans le calendrier",
 	"srf-filtered-selectorlabel-list": "Liste",
+	"srf-filtered-selectorlabel-table": "Tableau",
 	"srf-filtered-selectorlabel-calendar": "Calendrier",
 	"srf-printername-d3chart": "Graphique D3",
 	"srf-printername-timeseries": "Graphique de séries chronologiques",
