--- a/extensions/SemanticResultFormats/i18n/ja.json
+++ b/extensions/SemanticResultFormats/i18n/ja.json
@@ -8,13 +8,17 @@
 			"Schu",
 			"Shirayuki",
 			"Whym",
-			"青子守歌"
+			"青子守歌",
+			"Rxy",
+			"SkyDaisy9",
+			"Sujiniku",
+			"Otokoume"
 		]
 	},
 	"srf-desc": "Semantic MediaWiki のクエリのための追加的な結果の形式",
 	"srf-name": "意味的結果の形式",
 	"prefs-srf": "意味的結果の形式",
-	"srf-module-loading": "読み込み中…",
+	"srf-module-loading": "読み込み中...",
 	"srf-paramdesc-layout": "利用できるレイアウト",
 	"srf-paramdesc-height": "高さ",
 	"srf-paramdesc-width": "幅",
@@ -28,9 +32,10 @@
 	"srf-ui-common-label-datasource": "データ ソース",
 	"srf-ui-tooltip-title-options": "オプション",
 	"srf-ui-tooltip-title-scope": "スコープ",
+	"srf-ui-tooltip-title-legend": "凡例",
 	"srf-error-option-mix": "オプション ($1) は利用できません",
 	"srf-error-option-link-all": "オプション ($1) を使用するには、パラメーター「link」を「all」に設定する必要があります",
-	"srf-error-missing-layout": "レイアウトがありません",
+	"srf-error-missing-layout": "レイアウトがないため、チャートやグラフを表示することができません。",
 	"srf-warn-empy-chart": "データが足りないため、グラフは空です",
 	"srfc_previousmonth": "前の月",
 	"srfc_nextmonth": "次の月",
@@ -95,6 +100,7 @@
 	"srf-paramdesc-grouplabel": "グループ ラベルを指定",
 	"srf-paramdesc-chartcursor": "グラフ カーソルの表示オプション",
 	"srf-paramdesc-trendline": "グラフとその近似曲線の同時表示を有効化",
+	"srf-paramdesc-paneview": "小さな折れ線グラフの入る枠の位置を指定します。使用できる値: 「bottom」、「top」、「none」。既定値: 「bottom」",
 	"srf-paramdesc-infotext": "対応する情報タブで追加的な情報を表示",
 	"srf-ui-gridview-label-item": "データ項目",
 	"srf-ui-gridview-label-value": "データの値",
@@ -133,6 +139,9 @@
 	"srf_paramdesc_graphlink": "グラフ リンク",
 	"srf_paramdesc_graphcolor": "グラフの色",
 	"srf-printername-datatables": "データテーブル",
+	"srf-ui-datatables-label-placeholder-column-search": "検索...",
+	"srf-ui-datatables-label-sLoadingRecords": "読み込み中...",
+	"srf-ui-datatables-label-sProcessing": "処理中...",
 	"srf-paramdesc-parent": "親ページを含むプロパティ",
 	"srf-printername-slideshow": "スライドショー",
 	"srf-paramdesc-delay": "スライド間の遅延 (秒)",
@@ -144,6 +153,7 @@
 	"srf-paramdesc-filtered-list-outrotemplate": "問い合わせ結果がある場合、その後に表示するテンプレートの名前。",
 	"srf-paramdesc-filtered-calendar-title-template": "カレンダーでイベントのタイトルの整形に使用するテンプレート",
 	"srf-filtered-selectorlabel-list": "一覧",
+	"srf-filtered-selectorlabel-table": "テーブル",
 	"srf-filtered-selectorlabel-calendar": "カレンダー",
 	"srf-filtered-firstdayofweek": "0",
 	"srf-printername-d3chart": "D3 チャート",
