--- a/extensions/SemanticResultFormats/i18n/lb.json
+++ b/extensions/SemanticResultFormats/i18n/lb.json
@@ -5,8 +5,8 @@
 		]
 	},
 	"srf-name": "Formate vu semantesche Resultater",
-	"prefs-srf-eventcalendar-options": "{{INT:Srf-printername-eventcalendar}} Optiounen",
-	"prefs-srf-datatables-options": "{{INT:srf-printername-datatables}} Optiounen",
+	"prefs-srf-eventcalendar-options": "Optioune vum Kalenner vun den Eventementer",
+	"prefs-srf-datatables-options": "Optioune vun den Tabelle vun Donnéeën",
 	"srf-module-loading": "Lueden...",
 	"srf-paramdesc-height": "Héicht",
 	"srf-paramdesc-width": "Breet",
@@ -21,13 +21,14 @@
 	"srf-ui-common-label-parameters": "Parameteren",
 	"srf-ui-common-label-query": "Ufro",
 	"srf-error-option-mix": "Optioun ($1) ass net disponibel",
-	"srf-error-missing-layout": "De Layout feelt",
+	"srf-error-missing-layout": "Den Diagramm oder d'Graphik kann net gewise gi well de Layout feelt.",
 	"srfc_previousmonth": "Virege Mount",
 	"srfc_nextmonth": "Nächste Mount",
 	"srfc_today": "Haut",
 	"srfc_gotomonth": "Géi op de Mount",
 	"srf_printername_calendar": "Monatleche Kalenner",
 	"srf_paramdesc_calendarlang": "De Code vun der Sprooch an där de Kalenner gewise gëtt",
+	"srf-paramdesc-calendar-startmonth": "De Mound deen am Kalenner am Ufank gewise gëtt (Standard ass den aktuelle Mound)",
 	"srf_printername_vcard": "Export als vCard",
 	"srf_icalendar_link": "iKalenner",
 	"srf_printername_icalendar": "Export als iCalendar",
@@ -102,6 +103,7 @@
 	"srf-paramdesc-effect": "Den Iwwergang dee vun engem Slide op den nächste Slide benotzt gëtt",
 	"srf-printername-filtered": "Gefiltert",
 	"srf-filtered-selectorlabel-list": "Lëscht",
+	"srf-filtered-selectorlabel-table": "Tabell",
 	"srf-filtered-selectorlabel-calendar": "Kalenner",
 	"srf-printername-d3chart": "D3 Grafik",
 	"srf-paramdesc-zoom": "Zoom aschalten",
