--- a/extensions/SemanticResultFormats/i18n/mk.json
+++ b/extensions/SemanticResultFormats/i18n/mk.json
@@ -8,12 +8,12 @@
 	"srf-name": "Формати на семантички резултати",
 	"prefs-srf": "Формати на семантички резултати",
 	"srf-prefs-intro-text": "Го воспоставивте додатокот „Формати на семантички резултати“. Дополнителна помош ќе добиете на страницата за [https://www.semantic-mediawiki.org/wiki/Help:Result_formats формати на резултатите].",
-	"prefs-srf-eventcalendar-options": "Нагодувања за {{INT:Srf-printername-eventcalendar}}",
+	"prefs-srf-eventcalendar-options": "Поставки на Календарот на настани",
 	"srf-prefs-eventcalendar-options-update-default": "Овозможи [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates автоматска поднова] на настаните во календарот при превчитување на страницата",
 	"srf-prefs-eventcalendar-options-paneview-default": "Овозможи надгледен поглед по основно",
-	"prefs-srf-datatables-options": "Нагодувања за {{INT:srf-printername-datatables}}",
+	"prefs-srf-datatables-options": "Нагодувања за Податочните таблици",
 	"srf-prefs-datatables-options-update-default": "Овозможи [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates автоматски поднови] на содржината во табелите при превчитување на страницата",
-	"srf-prefs-datatables-options-cache-default": "Овозможи [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage локално складирање] за да се подобри времето на одговор",
+	"srf-prefs-datatables-options-cache-default": "Овозможи [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage месно складирање] за да се подобри времето на одговор",
 	"srf-module-loading": "Вчитувам...",
 	"srf-paramdesc-layout": "Распоред на располагање",
 	"srf-paramdesc-height": "Висина",
@@ -41,7 +41,8 @@
 	"srf-ui-widgets-label-parameter-limit": "Граничен параметар",
 	"srf-error-option-mix": "Можноста ($1) не е достапна",
 	"srf-error-option-link-all": "Можноста ($1) бара параметарот „link“ да биде ставен на „all“",
-	"srf-error-missing-layout": "Распоредот недостасува",
+	"srf-error-missing-layout": "Табелата/графиконот не може да се прикаже бидејќи недостасува распоредот.",
+	"srf-error-jqplot-stackseries-data-length": "Табелата/графиконот не може да се прикаже бидејќи не секој столб/ред има ист број на ставки.",
 	"srf-warn-empy-chart": "Дијаграмот/графиконот е празен или недостасуваат податоци",
 	"srfc_previousmonth": "Претходен месец",
 	"srfc_nextmonth": "Следен месец",
@@ -50,6 +51,8 @@
 	"srf_printername_calendar": "Месечен календар",
 	"srf_paramdesc_calendarlang": "Кодот на јазикот на кој ќе се прикажува календарот",
 	"srf_paramdesc_calendarcolors": "Бојата за приказ на секое датумско својство (пример: \"Почетен датум=>green,Краен датум=>#09c\")",
+	"srf-paramdesc-calendar-startmonth": "Од кој месец да почнува приказот на календарот (по основно: тековниот месец)",
+	"srf-paramdesc-calendar-startyear": "Од која година да почнува приказот на календарот (по основно: тековната година)",
 	"srf_printername_vcard": "Извоз на vCard",
 	"srf_icalendar_link": "iКалендар",
 	"srf_printername_icalendar": "Извоз на iCalendar",
@@ -69,7 +72,7 @@
 	"srf-paramdesc-default": "Основна вредност што ќе се прикажува кога нема бројчени резултати",
 	"srf_printername_earliest": "Прва временска точка",
 	"srf_printername_latest": "Последна временска точка",
-	"srf_printername_timeline": "Хронологија",
+	"srf_printername_timeline": "Времеслед",
 	"srf_printername_eventline": "Преглед на настани",
 	"srf_paramdesc_timelinebands": "Определува кои ленти ќе се прикажуваат во резултатот.",
 	"srf_paramdesc_timelineposition": "Определува каде временската скала најпрвин ќе се фокусира.",
@@ -77,7 +80,7 @@
 	"srf_paramdesc_timelineend": "Име на својството кое се користи за определување на втората временска точка",
 	"srf_paramdesc_timelinesize": "Висината на временската скала",
 	"srf-timeline-allresults": "Понатамошни резултати од ова барање.",
-	"srf-timeline-nojs": "За да можете да ја гледате интерактивната хронологија, ќе треба да имате овозможено JavaScript.",
+	"srf-timeline-nojs": "За да можете да ја гледате интерактивната времеслед, ќе треба да имате овозможено JavaScript.",
 	"srf_paramdesc_views": "Погледите за прикажување",
 	"srf_paramdesc_facets": "Збирот својства кои ќе се прикажуваат на секоја страница",
 	"srf_paramdesc_lens": "Името на шаблонот со кој ќе се прикажат својствата на страницата",
@@ -115,6 +118,7 @@
 	"srf-paramdesc-chartcursor": "Можност за приказ на курсор во графиконот",
 	"srf-paramdesc-trendline": "Овозможи едновремен приказ на графикон и неговата трендова линија",
 	"srf-paramdesc-gridview": "Истовремено прикажувај графикон и податочни збирови Допуштени вредности: „none“ и „tabs“. По основно: „none“",
+	"srf-paramdesc-paneview": "Укажете каде да се наоѓа квадратот со мал линиски графикон. Допуштени вредности: „bottom“, „top“ и „none“. По основно: „bottom“",
 	"srf-paramdesc-infotext": "Прикажување на дополнителни информации во соодветното инфојазиче",
 	"srf-ui-gridview-label-item": "Податочна ставка",
 	"srf-ui-gridview-label-value": "Податочна вредност",
@@ -178,7 +182,7 @@
 	"srf-ui-datatables-label-update-success": "Табелата е успешно подновена",
 	"srf-ui-datatables-label-update-error": "Подновата на табелата не успеа.",
 	"srf-ui-datatables-label-placeholder-column-search": "Пребарај...",
-	"srf-ui-datatables-label-content-cache": "Содржината е изведена од локалниот меѓусклад.",
+	"srf-ui-datatables-label-content-cache": "Содржината е изведена од месниот меѓусклад.",
 	"srf-ui-datatables-label-content-server": "Содржината е изведена од опслужувачот.",
 	"srf-ui-datatables-label-multiselect-column-header": "Расположиви колони",
 	"srf-ui-datatables-label-multiselect-column-noneselectedtext": "Нагодувања на филтерот",
@@ -224,6 +228,7 @@
 	"srf-paramdesc-filtered-calendar-title": "Исписот што го содржи насловот на настанот. Не може да се користи заедно со насловен шаблон.",
 	"srf-paramdesc-filtered-calendar-title-template": "Шаблон со кој се форматира насловот на настанот во календарот",
 	"srf-filtered-selectorlabel-list": "Список",
+	"srf-filtered-selectorlabel-table": "Табела",
 	"srf-filtered-selectorlabel-calendar": "Календар",
 	"srf-printername-d3chart": "D3-графикон",
 	"srf-printername-timeseries": "Графикон на временска низа",
@@ -247,6 +252,9 @@
 	"srf-ui-eventcalendar-label-week": "Недела",
 	"srf-ui-eventcalendar-label-day": "Ден",
 	"srf-ui-eventcalendar-label-allday": "Цел ден",
+	"srf-ui-eventcalendar-format-title-month": "MMMM yyyy г.",
+	"srf-ui-eventcalendar-format-title-week": "d [MMM][ yyyy]{ '&#8212;' d MMM yyyy} г.",
+	"srf-ui-eventcalendar-format-title-day": "dddd d MMM yyyy",
 	"srf-ui-eventcalendar-label-update-success": "Подновата на календарот со настани е успешна.",
 	"srf-ui-eventcalendar-label-update-error": "Не успеа подновата на календарот.",
 	"srf-printername-dygraphs": "Двографен дијаграм",
