--- a/extensions/SemanticResultFormats/i18n/pl.json
+++ b/extensions/SemanticResultFormats/i18n/pl.json
@@ -5,17 +5,33 @@
 			"Maire",
 			"Sp5uhe",
 			"ToSter",
-			"Rzuwig"
+			"Rzuwig",
+			"Alan ffm",
+			"Chrumps"
 		]
 	},
 	"srf-desc": "Dodatkowe formaty dla zapytań semantycznych MediaWiki z wiersza poleceń",
 	"srf-name": "Formaty semantycznych wyników",
+	"srf-paramdesc-layout": "Dostępny układ",
+	"srf-paramdesc-height": "Wysokość",
+	"srf-paramdesc-width": "Szerokość",
+	"srf-navigation-previous": "Poprzednie",
+	"srf-ui-navigation-next": "Następne",
+	"srf-ui-common-label-source": "Źródło",
+	"srf-ui-common-label-datasource": "Źródło danych",
+	"srf-ui-tooltip-title-options": "Opcje",
+	"srf-ui-tooltip-title-filter": "Filtr",
+	"srf-ui-common-label-refresh": "Odśwież",
+	"srf-ui-common-label-parameters": "Parametry",
+	"srf-ui-common-label-query": "Zapytanie",
 	"srfc_previousmonth": "Poprzedni miesiąc",
 	"srfc_nextmonth": "Następny miesiąc",
 	"srfc_today": "Dzisiaj",
 	"srfc_gotomonth": "Idź do miesiąca",
 	"srf_printername_calendar": "Kalendarz na miesiąc",
 	"srf_paramdesc_calendarlang": "Kod języka, w którym jest wyświetlany kalendarz",
+	"srf-paramdesc-calendar-startmonth": "Miesiąc, z którym inicjowane jest wyświetlanie kalendarza (domyślnie bieżący miesiąc)",
+	"srf-paramdesc-calendar-startyear": "Rok, z którym inicjowane jest wyświetlanie kalendarza (domyślnie bieżący rok)",
 	"srf_printername_vcard": "eksport vCard",
 	"srf_printername_icalendar": "eksport iCalendar",
 	"srf_paramdesc_icalendartitle": "Nazwa pliku kalendarza",
@@ -48,5 +64,14 @@
 	"srf_paramdesc_bardirection": "Wskaż kierunek wykresu",
 	"srf_paramdesc_barnumbersaxislabel": "Etykieta wartości osi",
 	"srf-ui-gridview-label-item": "Element danych",
-	"srf_printername_gallery": "Galeria"
+	"srf_printername_gallery": "Galeria",
+	"srf_paramdesc_autocaptions": "Użyj nazwy pliku jako podpisu, jeśli nie został podany",
+	"srf-filtered-selectorlabel-table": "Tabela",
+	"srf-ui-eventcalendar-label-today": "Dzisiaj",
+	"srf-ui-eventcalendar-label-month": "Miesiąc",
+	"srf-ui-eventcalendar-label-week": "Tydzień",
+	"srf-ui-eventcalendar-label-day": "Dzień",
+	"srf-ui-mediaplayer-label-repeat": "Powtórz",
+	"srf-ui-mediaplayer-label-repeat-off": "Powtarzanie wyłączone",
+	"srf-ui-mediaplayer-label-full-screen": "Pełny ekran"
 }
