--- a/extensions/SemanticResultFormats/i18n/pt.json
+++ b/extensions/SemanticResultFormats/i18n/pt.json
@@ -4,11 +4,14 @@
 			"Hamilton Abreu",
 			"Malafaya",
 			"SandroHc",
-			"Waldir"
+			"Waldir",
+			"Vitorvicentevalente",
+			"Macofe"
 		]
 	},
 	"srf-desc": "Formatos adicionais para consultas de incorporação dinâmica ''(inline queries)'' do MediaWiki Semântico",
 	"srf-name": "Formatos dos Resultados Semânticos",
+	"srf-module-loading": "A carregar...",
 	"srfc_previousmonth": "Mês anterior",
 	"srfc_nextmonth": "Mês seguinte",
 	"srfc_today": "Hoje",
@@ -87,5 +90,9 @@
 	"srf_paramdesc_graphlink": "Link do grafo",
 	"srf_paramdesc_graphcolor": "Cor do grafo",
 	"srf-paramdesc-graph-wwl": "Limite para forçar nova linha (em nº de caracteres)",
-	"srf-printername-filtered": "Filtrado"
+	"srf-ui-datatables-label-placeholder-column-search": "Pesquisar...",
+	"srf-ui-datatables-label-sLoadingRecords": "A carregar...",
+	"srf-ui-datatables-label-sProcessing": "A processar...",
+	"srf-printername-filtered": "Filtrado",
+	"srf-filtered-selectorlabel-table": "Tabela"
 }
