--- a/extensions/SemanticResultFormats/i18n/ca.json
+++ b/extensions/SemanticResultFormats/i18n/ca.json
@@ -4,11 +4,23 @@
 			"Dvdgmz",
 			"Paucabot",
 			"Toniher",
-			"Ssola"
+			"Ssola",
+			"Macofe"
 		]
 	},
 	"srf-desc": "Formats addicionals per a les consultes en línia del Semantic MediaWiki.",
 	"srf-name": "Semantic Result Formats",
+	"srf-module-loading": "S'està carregant...",
+	"srf-paramdesc-height": "Alçada",
+	"srf-paramdesc-width": "Amplada",
+	"srf-paramdesc-class": "Especifiqueu una classe CSS addicional",
+	"srf-module-nomatch": "No s'han trobat coincidències",
+	"srf-paramdesc-charttype": "Tipus de gràfic disponible",
+	"srf-navigation-previous": "Anterior",
+	"srf-ui-navigation-prev": "Ant",
+	"srf-ui-navigation-next": "Següent",
+	"srf-ui-common-label-source": "Origen",
+	"srf-ui-common-label-datasource": "Origen de dades",
 	"srfc_previousmonth": "Mes anterior",
 	"srfc_nextmonth": "Mes posterior",
 	"srfc_today": "Avui",
@@ -56,5 +68,6 @@
 	"srf_paramdesc_rankdir": "Direcció de la fletxa",
 	"srf_paramdesc_graphlink": "Enllaç del gràfic",
 	"srf_paramdesc_graphcolor": "Color del gràfic",
-	"srf-ui-datatables-label-oPaginate-sNext": "Següent"
+	"srf-ui-datatables-label-oPaginate-sNext": "Següent",
+	"srf-filtered-selectorlabel-table": "Taula"
 }
