--- a/extensions/SemanticResultFormats/i18n/es.json
+++ b/extensions/SemanticResultFormats/i18n/es.json
@@ -13,17 +13,19 @@
 			"Sanbec",
 			"Translationista",
 			"VegaDark",
-			"Fitoschido"
+			"Fitoschido",
+			"Macofe"
 		]
 	},
-	"srf-desc": "Formatos adicionales para consultas en línea de Semantic MediaWiki",
+	"srf-desc": "Formatos de resultados adicionales para consultas de Semantic MediaWiki",
 	"srf-name": "Formatos de resultado semántico",
 	"prefs-srf": "Formatos de resultados semánticos",
-	"srf-prefs-intro-text": "Tienes instalada la extensión para dar formato a los resultados semánticos pero en este momento no tienes opciones personalizables de usuario. Para obtener ayuda, visita la página de ayuda sobre los [http://www.semantic-mediawiki.org/wiki/Help:Result_formats formatos de los resultados].",
-	"prefs-srf-datatables-options": "Opciones de {{INT:srf-printername-datatables}}",
+	"srf-prefs-intro-text": "Tienes instalada la extensión para dar formato a los resultados semánticos. Para obtener ayuda adicional, visita la página de ayuda sobre los [https://www.semantic-mediawiki.org/wiki/Help:Result_formats formatos de los resultados].",
+	"prefs-srf-eventcalendar-options": "Opciones de eventos de calendario",
+	"prefs-srf-datatables-options": "Opciones de DataTables",
 	"srf-module-loading": "Cargando...",
 	"srf-paramdesc-layout": "Diseño disponible",
-	"srf-paramdesc-height": "Altura (en píxeles)",
+	"srf-paramdesc-height": "Altura",
 	"srf-paramdesc-width": "Anchura",
 	"srf-paramdesc-class": "Especificar una clase adicional de hoja de estilos en cascada (CSS)",
 	"srf-module-nomatch": "No se encontraron coincidencias",
@@ -40,12 +42,14 @@
 	"srf-ui-tooltip-title-scope": "Ámbito de aplicación",
 	"srf-ui-tooltip-title-legend": "Leyenda",
 	"srf-ui-tooltip-title-filter": "Filtro",
+	"srf-ui-common-label-refresh": "Actualizar",
 	"srf-ui-common-label-parameters": "Parámetros",
 	"srf-ui-common-label-query": "Consulta",
 	"srf-ui-common-label-daterange": "Intervalo de fechas",
 	"srf-error-option-mix": "La opción ($1) no está disponible",
 	"srf-error-option-link-all": "La opción ($1) necesita que el parámetro \"link\" esté definido como \"all\"",
-	"srf-error-missing-layout": "Falta el diseño",
+	"srf-error-missing-layout": "No se puede mostrar el gráfico porque falta el diseño.",
+	"srf-error-jqplot-stackseries-data-length": "No se puede mostrar el gráfico porque no todas las barras o líneas tienen la misma cantidad de elementos.",
 	"srf-warn-empy-chart": "La tabla/gráfica está vacía porque faltan datos",
 	"srfc_previousmonth": "Mes anterior",
 	"srfc_nextmonth": "Próximo mes",
@@ -54,10 +58,12 @@
 	"srf_printername_calendar": "Calendario mensual",
 	"srf_paramdesc_calendarlang": "El código del idioma en el que se muestra el calendario",
 	"srf_paramdesc_calendarcolors": "El color a mostrar para cada propiedad de datos (ejemplo: \"Fecha de inicio=>green, Fecha de fin=>#09c\")",
+	"srf-paramdesc-calendar-startmonth": "El mes con el cual se inicializa la pantalla de calendario (si se omite es el mes actual)",
+	"srf-paramdesc-calendar-startyear": "El año con el cual se inicializa la pantalla de calendario (si se omite es el año actual)",
 	"srf_printername_vcard": "Exportar vCard",
 	"srf_printername_icalendar": "Exportar iCalendar",
 	"srf_paramdesc_icalendartitle": "El título del archivo de calendario",
-	"srf_paramdesc_icalendardescription": "El descripción del archivo de calendario",
+	"srf_paramdesc_icalendardescription": "La descripción del archivo de calendario",
 	"srf_printername_bibtex": "Exportar BibTeX",
 	"srf_outline_novalue": "Sin valor",
 	"srf_printername_outline": "Esquema",
@@ -66,22 +72,22 @@
 	"srf_printername_average": "Promedio de números",
 	"srf_printername_max": "Número máximo",
 	"srf_printername_min": "Número mínimo",
-	"srf_paramdesc_limit": "La cantidad máxima de páginas a consultar",
+	"srf_paramdesc_limit": "La cantidad máxima de páginas que consultar",
 	"srf_printername_product": "Producto de números",
 	"srf_printername_median": "Mediana de los números",
-	"srf-paramdesc-default": "Valor por defecto que se mostrará cuando no haya resultados numéricos",
+	"srf-paramdesc-default": "Valor predeterminado que se mostrará cuando no haya resultados numéricos",
 	"srf_printername_earliest": "Primera hora",
 	"srf_printername_latest": "Última hora",
 	"srf_printername_timeline": "Línea de tiempo",
 	"srf_printername_eventline": "Línea de eventos",
-	"srf_paramdesc_timelinebands": "PDF",
-	"srf_paramdesc_timelineposition": "Define donde se fijará inicialmente la línea del tiempo.",
+	"srf_paramdesc_timelinebands": "Define cuáles bandas se muestran en el resultado.",
+	"srf_paramdesc_timelineposition": "Define donde se enfocará inicialmente la línea de tiempo.",
 	"srf_paramdesc_timelinestart": "Un nombre de propiedad utilizado para definir un primer punto temporal",
 	"srf_paramdesc_timelineend": "Un nombre de propiedad utilizado para definir un segundo punto temporal",
 	"srf_paramdesc_timelinesize": "La altura de la línea de tiempo",
 	"srf-timeline-allresults": "Resultados adicionales para esta consulta.",
 	"srf-timeline-nojs": "Debe tener habilitado JavaScript para ver la línea de tiempo interactiva.",
-	"srf_paramdesc_views": "Las vistas a mostrar",
+	"srf_paramdesc_views": "Las vistas que se mostrarán",
 	"srf_paramdesc_facets": "El grupo de propiedades a mostrar para cada página",
 	"srf_paramdesc_lens": "El nombre de una plantilla con la que se muestra la propiedades de la página",
 	"srf_printername_googlebar": "Gráfico de barras de Google",
@@ -91,13 +97,13 @@
 	"srf_paramdesc_chartheight": "Especifica la altura (en píxeles) de una tabla o una gráfica",
 	"srf_paramdesc_chartwidth": "Especificar la anchura (en píxeles o porcentaje) de la tabla o gráfica",
 	"srf_paramdesc_charttitle": "El título del gráfico",
-	"srf_paramdesc_barcolor": "El color de las barras",
+	"srf_paramdesc_barcolor": "Especificar los colores del gráfico",
 	"srf_paramdesc_bardirection": "Especifique la dirección de un gráfico",
 	"srf-paramdesc-direction": "Especificar la dirección de una tabla o una gráfica",
 	"srf_paramdesc_barnumbersaxislabel": "La etiqueta del eje de los números",
 	"srf-paramdesc-labelaxislabel": "La etiqueta para el eje de la etiqueta",
 	"srf-paramdesc-ticklabels": "Activar la visualización de etiquetas de marca",
-	"srf-paramdesc-minvalue": "El valor mínimo a mostrar en el eje de ordenadas",
+	"srf-paramdesc-minvalue": "El valor mínimo que mostrar en el eje de ordenadas",
 	"srf-paramdesc-pointlabels": "Visualización de datos puntuales en la gráfica",
 	"srf-paramdesc-chartlegend": "Posición de la leyenda de la gráfica",
 	"srf-paramdesc-datalabels": "Rótulos de datos de la tabla/gráfica",
@@ -105,7 +111,7 @@
 	"srf-paramdesc-chartclass": "Clase CSS adicional",
 	"srf-paramdesc-renderer": "Seleccione un representador tablas/gráficas",
 	"srf-paramdesc-filling": "Opción de rellenado individual",
-	"srf-paramdesc-theme": "Seleccione un tema de cuadrícula",
+	"srf-paramdesc-theme": "Selecciona un tema de cuadrícula",
 	"srf-paramdesc-chartcolor": "Asignar colores individuales al gráfico",
 	"srf-paramdesc-colorscheme": "Seleccione una combinación de colores",
 	"srf-paramdesc-valueformat": "Especifica una regla de formato para valores",
@@ -117,7 +123,7 @@
 	"srf-paramdesc-grouplabel": "Determinar la etiqueta de grupo",
 	"srf-paramdesc-chartcursor": "Opción de visualización del cursor de tabla",
 	"srf-paramdesc-trendline": "Activar la visualización simultánea de un gráfico y su línea de tendencia",
-	"srf-paramdesc-gridview": "Mostrar simultáneamente gráfico y conjunto de datos. Valores permitidos: none y tabs. Predeterminado: none",
+	"srf-paramdesc-gridview": "Mostrar simultáneamente gráfico y conjunto de datos. Valores permitidos: \"none\" y \"tabs\". Predeterminado: \"none\"",
 	"srf-paramdesc-infotext": "Mostrar información adicional en una ficha de información correspondiente",
 	"srf-ui-gridview-label-item": "Elemento de datos",
 	"srf-ui-gridview-label-value": "Valor de los datos",
@@ -126,7 +132,7 @@
 	"srf-ui-gridview-label-data-tab": "Datos",
 	"srf-ui-gridview-label-info-tab": "Información",
 	"srf_printername_gallery": "Galería",
-	"srf_paramdesc_perrow": "La cantidad de imágenes por línea",
+	"srf_paramdesc_perrow": "La cantidad de imágenes por fila",
 	"srf_paramdesc_widths": "La anchura de las imágenes",
 	"srf_paramdesc_heights": "La altura de las imágenes",
 	"srf_paramdesc_autocaptions": "Usar el nombre del archivo como pie de imagen cuando no se indique ninguna otra",
@@ -135,10 +141,10 @@
 	"srf_paramdesc_imageproperty": "Nombre de una propiedad semántica en las páginas consultadas que apunta a las imágenes a usar. Cuando esté definido, las propias páginas consultadas no se mostrarán como imágenes",
 	"srf-paramdesc-redirects": "El nombre de una propiedad semántica presente en las páginas consultadas que contienen el destino de la redirección",
 	"srf-paramdesc-navigation": "Diseñar control de navegación",
-	"srf-paramdesc-overlay": "Activar la superposición de imagenes",
+	"srf-paramdesc-overlay": "Activar la superposición de imágenes",
 	"srf-gallery-navigation-previous": "Anterior",
 	"srf-gallery-navigation-next": "Siguiente",
-	"srf-gallery-overlay-count": "Imagen  $1  de$2",
+	"srf-gallery-overlay-count": "Imagen $1 de $2",
 	"srf-gallery-image-url-error": "No se encontró la imagen.",
 	"srf_printername_tagcloud": "Nube de etiquetas",
 	"srf_paramdesc_includesubject": "Si los propios nombres de los temas deben incluirse",
@@ -165,7 +171,7 @@
 	"srf-paramdesc-graph-nameprop": "Permite definir una propiedad que se usará como asunto en vez del asunto real",
 	"srf-paramdesc-graph-nodeshape": "La forma de cada nodo en la gráfica",
 	"srf_paramdesc_graphname": "Título",
-	"srf_paramdesc_graphsize": "Tamaño de la gráfica (en px)",
+	"srf_paramdesc_graphsize": "Tamaño de la gráfica (en píxeles)",
 	"srf_paramdesc_graphlegend": "Mostrar o no la leyenda de la gráfica",
 	"srf_paramdesc_graphlabel": "Etiqueta de la gráfica",
 	"srf_paramdesc_rankdir": "Dirección de la flecha",
@@ -183,16 +189,24 @@
 	"srf-ui-datatables-label-multiselect-column-noneselectedtext": "Configuración de filtros",
 	"srf-ui-datatables-label-multiselect-column-selectedtext": "Las columnas son visibles",
 	"srf-ui-datatables-label-sEmptyTable": "No hay datos disponibles en la tabla",
-	"srf-ui-datatables-label-sInfoEmpty": "Muestra: 0 → 0 de 0 entradas",
+	"srf-ui-datatables-label-sInfo": "Se muestran _START_ a _END_ de _TOTAL_ entradas",
+	"srf-ui-datatables-label-sInfoEmpty": "Muestra: 0 a 0 de 0 entradas",
+	"srf-ui-datatables-label-sInfoFiltered": "(filtradas de _MAX_ entradas en total)",
+	"srf-ui-datatables-label-sLengthMenu": "Mostrar _MENU_ entradas",
 	"srf-ui-datatables-label-sLoadingRecords": "Cargando…",
 	"srf-ui-datatables-label-sProcessing": "Procesando…",
 	"srf-ui-datatables-label-sSearch": "Buscar:",
+	"srf-ui-datatables-label-oPaginate-sFirst": "Primero",
+	"srf-ui-datatables-label-oPaginate-sLast": "Último",
 	"srf-ui-datatables-label-oPaginate-sNext": "Siguiente",
 	"srf-ui-datatables-label-oPaginate-sPrevious": "Anterior",
+	"srf-ui-datatables-label-oAria-sSortAscending": ": activar para ordenar columna ascendentemente",
+	"srf-ui-datatables-label-oAria-sSortDescending": ": activar para ordenar columna descendentemente",
 	"srf_printername_tree": "Árbol",
 	"srf_printername_ultree": "Árbol UL",
 	"srf_printername_oltree": "Árbol OL",
 	"srf-noparentprop": "No se ha especificado ninguna propiedad padre. No se puede construir el árbol sin especificar una propiedad padre.",
+	"srf-rootinvalid": "El título de la página «$1» no es válido.",
 	"srf-paramdesc-parent": "La propiedad que contiene la página padre",
 	"srf-printername-slideshow": "Presentación de diapositivas",
 	"srf-paramdesc-delay": "Tiempo entre diapositivas, en segundos",
@@ -200,10 +214,10 @@
 	"srf-paramdesc-effect": "El efecto que se utilizará para cambiar de una diapositiva a la siguiente",
 	"srf-printername-filtered": "Filtrado",
 	"srf-paramdesc-filtered-views": "Las vistas que estarán disponibles en la pantalla de resultados.",
-	"srf-paramdesc-filtered-filter-position": "La posición de los filtros en relación con las vistas. Valores permitidos: top, bottom. Predeterminado: top.",
-	"srf-paramdesc-filtered-list-type": "El tipo de la lista. Valores permitidos: list, ul, ol. Predeterminado: list.",
-	"srf-paramdesc-filtered-list-template": "La plantilla que se utiliza para dar formato a las entradas de la lista.",
-	"srf-paramdesc-filtered-list-named-args": "Nombra los argumentos que se le pasan a la plantilla",
+	"srf-paramdesc-filtered-filter-position": "La posición de los filtros en relación con las vistas. Valores permitidos: \"top\", \"bottom\". Predeterminado: \"top\".",
+	"srf-paramdesc-filtered-list-type": "El tipo de la lista. Valores permitidos: \"list\", \"ul\", \"ol\". Predeterminado: \"list\".",
+	"srf-paramdesc-filtered-list-template": "La plantilla que se utilizará para dar formato a las entradas de la lista.",
+	"srf-paramdesc-filtered-list-named-args": "Nombra los argumentos que se le pasan a la plantilla.",
 	"srf-paramdesc-filtered-list-introtemplate": "El nombre de una plantilla que se mostrará antes de los resultados de la consulta, si hay alguna.",
 	"srf-paramdesc-filtered-list-outrotemplate": "El nombre de una plantilla que se mostrará después de los resultados de la consulta, si hay alguna.",
 	"srf-paramdesc-filtered-calendar-start": "La impresión que contiene la fecha de inicio de un evento",
@@ -211,6 +225,7 @@
 	"srf-paramdesc-filtered-calendar-title": "La impresión que contiene el título de un evento. No puede utilizarse junto con una plantilla de título.",
 	"srf-paramdesc-filtered-calendar-title-template": "Una plantilla que se utiliza para dar formato al título de un evento en el calendario",
 	"srf-filtered-selectorlabel-list": "Lista",
+	"srf-filtered-selectorlabel-table": "Tabla",
 	"srf-filtered-selectorlabel-calendar": "Calendario",
 	"srf-printername-d3chart": "Gráfico D3",
 	"srf-printername-timeseries": "Gráfico de series temporales",
@@ -234,8 +249,8 @@
 	"srf-ui-eventcalendar-label-day": "Día",
 	"srf-ui-eventcalendar-label-allday": "Todo el día",
 	"srf-printername-dygraphs": "Gráfico Dygraphs",
-	"srf-paramdesc-datasource": "La fuente en la que están accesibles los datos. Valores permitidos: file, raw y url. Por defecto: file",
-	"srf-paramdesc-errorbar": "La barra de error que se utilizará. Valores permitidos: fraction (intervalos de confianza para valores), sigma (desviación estándar de los valores) y range (rangos de valor personalizados)",
+	"srf-paramdesc-datasource": "La fuente en la que están accesibles los datos. Valores permitidos: \"file\", \"raw\" y \"url\". Predeterminado: \"file\"",
+	"srf-paramdesc-errorbar": "La barra de error que se utilizará. Valores permitidos: \"fraction\" (intervalos de confianza para valores), \"sigma\" (desviación estándar de los valores) y \"range\" (rangos de valor personalizados)",
 	"srf-paramdesc-movingaverage": "Mostrar el valor promedio en un número de días (cero indicará que no hay media móvil)",
 	"srf-paramdesc-yaxislabel": "Descripción que aparece en el eje y",
 	"srf-paramdesc-xaxislabel": "Descripción que aparece en el eje x",
@@ -257,7 +272,7 @@
 	"srf-ui-mediaplayer-label-shuffle": "Aleatorizar",
 	"srf-ui-mediaplayer-label-shuffle-off": "Desactivar modo aleatorio",
 	"srf-ui-mediaplayer-label-repeat": "Repetir",
-	"srf-ui-mediaplayer-label-repeat-off": "Desactivar modo de repetición",
+	"srf-ui-mediaplayer-label-repeat-off": "Desactivar repetición",
 	"srf-ui-mediaplayer-label-full-screen": "Pantalla completa",
 	"srf-ui-mediaplayer-label-restore-screen": "Restaurar la pantalla",
 	"srf-excel-link": "Excel"
