--- a/extensions/SemanticResultFormats/i18n/gl.json
+++ b/extensions/SemanticResultFormats/i18n/gl.json
@@ -2,13 +2,21 @@
 	"@metadata": {
 		"authors": [
 			"Alma",
-			"Toliño"
+			"Toliño",
+			"Elisardojm",
+			"Banjo"
 		]
 	},
-	"srf-desc": "Formatos adicionais para as pescudas interiores de Semantic MediaWiki",
+	"srf-desc": "Formatos de resultados adicionais para as pescudas de Semantic MediaWiki",
 	"srf-name": "Formatos dos resultados semánticos",
 	"prefs-srf": "Formatos dos resultados semánticos",
-	"srf-prefs-intro-text": "Ten instalada a extensión para dar formato aos resultados semánticos, pero nestes intres non ten opcións de personalización. Para obter axuda, visite a páxina de axuda sobre os [http://www.semantic-mediawiki.org/wiki/Help:Result_formats formatos dos rexultados].",
+	"srf-prefs-intro-text": "Ten instalada a extensión para dar formato aos resultados semánticos, pero nestes intres non ten opcións de personalización. Para obter axuda aducuibak, visite a páxina de axuda sobre os [https://www.semantic-mediawiki.org/wiki/Help:Result_formats formatos dos rexultados].",
+	"prefs-srf-eventcalendar-options": "Opcións de calendario de eventos",
+	"srf-prefs-eventcalendar-options-update-default": "Activa as [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates actualizacións automáticas] dos eventos do calendario durante a actualización da páxina",
+	"srf-prefs-eventcalendar-options-paneview-default": "Activar a vista de folla por defecto",
+	"prefs-srf-datatables-options": "Opcións de DataTables",
+	"srf-prefs-datatables-options-update-default": "Activa as [ttps://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates actualizacións automáticas] do contido da táboa durante a actualización da páxina",
+	"srf-prefs-datatables-options-cache-default": "Activar o [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage almacenamento local] para mellorar os tempos de resposta",
 	"srf-module-loading": "Cargando...",
 	"srf-paramdesc-layout": "Esquema dispoñible",
 	"srf-paramdesc-height": "Altura (en píxeles)",
@@ -26,9 +34,18 @@
 	"srf-ui-common-label-help-section": "sección de axuda",
 	"srf-ui-tooltip-title-options": "Opcións",
 	"srf-ui-tooltip-title-scope": "Alcance",
+	"srf-ui-tooltip-title-legend": "Lenda",
+	"srf-ui-tooltip-title-filter": "Filtro",
+	"srf-ui-common-label-refresh": "Refrescar",
+	"srf-ui-common-label-parameters": "Parámetros",
+	"srf-ui-common-label-query": "Consulta",
+	"srf-ui-common-label-paneview": "Vista de folla",
+	"srf-ui-common-label-daterange": "Intervalo de datas",
+	"srf-ui-widgets-label-parameter-limit": "Parámetro límite",
 	"srf-error-option-mix": "A opción ($1) non está dispoñible",
 	"srf-error-option-link-all": "A opción ($1) necesita que o parámetro \"link\" estea definido como \"all\"",
-	"srf-error-missing-layout": "Falta o esquema",
+	"srf-error-missing-layout": "Non se pode amosar o gráfico porque falta o deseño.",
+	"srf-error-jqplot-stackseries-data-length": "Non se pode amosar diagrama ou o gráfico porque non todas as barras ou liñas teñen a mesma cantidade de elementos.",
 	"srf-warn-empy-chart": "A gráfica está baleira porque non hai datos suficientes",
 	"srfc_previousmonth": "Mes anterior",
 	"srfc_nextmonth": "Mes seguinte",
@@ -37,6 +54,8 @@
 	"srf_printername_calendar": "Calendario mensual",
 	"srf_paramdesc_calendarlang": "O código da lingua na que mostrar o calendario",
 	"srf_paramdesc_calendarcolors": "A cor na que mostrar cada propiedade de data (exemplo: \"Data de inicio=>green,Data de fin=>#09c\")",
+	"srf-paramdesc-calendar-startmonth": "O mes co cal se inicializa a pantalla de calendario (se se omite é o mes actual)",
+	"srf-paramdesc-calendar-startyear": "O ano co cal se inicializa a pantalla de calendario (se se omite é o ano actual)",
 	"srf_vcard_link": "vTarxeta",
 	"srf_printername_vcard": "Exportación en vCard",
 	"srf_icalendar_link": "iCalendario",
@@ -102,7 +121,8 @@
 	"srf-paramdesc-grouplabel": "Determinar a etiqueta do grupo",
 	"srf-paramdesc-chartcursor": "Opción de visualización do cursor da gráfica",
 	"srf-paramdesc-trendline": "Activar a visualización simultánea dunha gráfica e a súa liña de tencendia",
-	"srf-paramdesc-gridview": "Mostrar a gráfica e os conxuntos de datos simultaneamente. Valores permitidos: none e tabs. Predeterminado: none",
+	"srf-paramdesc-gridview": "Mostrar a gráfica e os conxuntos de datos simultaneamente. Valores permitidos: none e tabs. Predeterminado: \"none\"",
+	"srf-paramdesc-paneview": "Especifique a posición do panel que contén un pequeno gráfico de liñas. Os valores permitidos son: \"abaixo\", \"arriba\" e \"ningún\". Por defecto úsase \"abaixo\"",
 	"srf-paramdesc-infotext": "Mostrar información adicional na lapela de información correspondente",
 	"srf-ui-gridview-label-item": "Elemento de datos",
 	"srf-ui-gridview-label-value": "Valor dos datos",
@@ -133,7 +153,7 @@
 	"srf_paramdesc_minsize": "O tamaño das etiquetas máis pequenas en porcentaxe",
 	"srf_paramdesc_maxsize": "O tamaño das etiquetas máis grandes en porcentaxe",
 	"srf_paramdesc_maxtags": "A cantidade máxima de etiquetas na nube",
-	"srf-paramdesc-excludetags": "Excluír as etiquetas (delimitador: ;)",
+	"srf-paramdesc-excludetags": "Excluír as etiquetas (delimitador: \";\")",
 	"srf_printername_valuerank": "Valor do rango",
 	"srf_printername_array": "Táboa",
 	"srf_paramdesc_pagetitle": "Mostrar ou omitir os títulos das páxinas como entradas dos resultados",
@@ -158,19 +178,51 @@
 	"srf_paramdesc_graphcolor": "Cor da gráfica",
 	"srf-paramdesc-graph-wwl": "Axuste automático de liña (en número de caracteres)",
 	"srf-printername-datatables": "Táboas de datos",
+	"srf-ui-datatables-label-conditions": "Condicións",
+	"srf-ui-datatables-label-parameters": "Parámetros",
+	"srf-ui-datatables-label-filters": "Filtros de columnas e busca",
+	"srf-ui-datatables-label-information": "Información",
+	"srf-ui-datatables-panel-disclaimer": "Os parámetros e as condicións poden modificarse, pero calquera modificación é temporal e será descartada despois de refrescar a páxina.",
+	"srf-ui-datatables-label-update-success": "A actualización da táboa foi correcta",
+	"srf-ui-datatables-label-update-error": "Fallou a actualización da táboa.",
+	"srf-ui-datatables-label-placeholder-column-search": "Procurar...",
+	"srf-ui-datatables-label-content-cache": "O contido foi recuperado da caché local.",
+	"srf-ui-datatables-label-content-server": "O contido foi recuperado do servidor.",
+	"srf-ui-datatables-label-multiselect-column-header": "Columnas dispoñibles",
+	"srf-ui-datatables-label-multiselect-column-noneselectedtext": "Configuración de filtros",
+	"srf-ui-datatables-label-multiselect-column-selectedtext": "As columnas son visibles",
+	"srf-ui-datatables-label-sEmptyTable": "Non hai datos dispoñibles na táboa",
+	"srf-ui-datatables-label-sInfo": "Mostrando _START_ to _END_ of _TOTAL_ entradas",
+	"srf-ui-datatables-label-sInfoEmpty": "Mostra 0 a 0 de 0 entradas",
+	"srf-ui-datatables-label-sInfoFiltered": "(filtrado de _MAX_ entradas do total)",
+	"srf-ui-datatables-label-sInfoThousands": ",",
+	"srf-ui-datatables-label-sLengthMenu": "Mostrar as entradas _MENU_",
+	"srf-ui-datatables-label-sLoadingRecords": "Cargando...",
+	"srf-ui-datatables-label-sProcessing": "Procesando...",
+	"srf-ui-datatables-label-sSearch": "Procurar:",
+	"srf-ui-datatables-label-sZeroRecords": "Non se atoparon rexistros que coincidisen",
+	"srf-ui-datatables-label-oPaginate-sFirst": "Primeiro",
+	"srf-ui-datatables-label-oPaginate-sLast": "Último",
+	"srf-ui-datatables-label-oPaginate-sNext": "Seguinte",
+	"srf-ui-datatables-label-oPaginate-sPrevious": "Anterior",
+	"srf-ui-datatables-label-oAria-sSortAscending": ": activar para ordenar a columna ascendentemente",
+	"srf-ui-datatables-label-oAria-sSortDescending": ": activar para ordenar a columna descendentemente",
 	"srf_printername_tree": "Árbore",
 	"srf_printername_ultree": "Árbore UL",
 	"srf_printername_oltree": "Árbore OL",
 	"srf-noparentprop": "Non se especificou propiedade pai ningunha. Non se pode construír a árbore sen achegar unha propiedade pai.",
+	"srf-rootinvalid": "\"$1\" non é un título de páxina válido.",
 	"srf-paramdesc-parent": "A propiedade que contén a páxina pai",
+	"srf-paramdesc-root": "Páxina raíz da árbore",
+	"srf-paramdesc-startlevel": "Nivel inicial da árbore, p. ex. para integrala noutra árbore",
 	"srf-printername-slideshow": "Presentación de diapositivas",
 	"srf-paramdesc-delay": "O tempo entre diapositivas, en segundos",
 	"srf-paramdesc-navigation-controls": "Mostrar ou non os controis de navegación",
 	"srf-paramdesc-effect": "O efecto que se usará ao cambiar dunha diapositiva a outra",
 	"srf-printername-filtered": "Filtrado",
 	"srf-paramdesc-filtered-views": "As vistas que deberan estar dispoñibles na presentación do resultado.",
-	"srf-paramdesc-filtered-filter-position": "A posición dos filtros en relación coas visitas. Valores permitidos: top, bottom. Predeterminado: top.",
-	"srf-paramdesc-filtered-list-type": "O tipo de lista. Valores permitidos: list, ul, ol. Predeterminado: list.",
+	"srf-paramdesc-filtered-filter-position": "A posición dos filtros en relación coas visitas. Valores permitidos: ''top'', ''bottom''. Predeterminado: ''top''.",
+	"srf-paramdesc-filtered-list-type": "O tipo de lista. Valores permitidos: ''list'', ''ul'', ''ol''. Predeterminado: ''list''.",
 	"srf-paramdesc-filtered-list-template": "O modelo empregado para dar formato ás entradas da lista.",
 	"srf-paramdesc-filtered-list-named-args": "Dea nome aos argumentos que se lle pasan ao modelo.",
 	"srf-paramdesc-filtered-list-introtemplate": "O nome dun modelo a mostrar antes dos resultados da pescuda, se houbese algún.",
@@ -180,6 +232,7 @@
 	"srf-paramdesc-filtered-calendar-title": "A impresión que contén o título dun acontecemento. Non se pode empregar á vez que un modelo de título.",
 	"srf-paramdesc-filtered-calendar-title-template": "Un modelo utilizado para dar formato ao título dun acontecemento no calendario",
 	"srf-filtered-selectorlabel-list": "Lista",
+	"srf-filtered-selectorlabel-table": "Táboa",
 	"srf-filtered-selectorlabel-calendar": "Calendario",
 	"srf-printername-d3chart": "Gráfica D3",
 	"srf-printername-timeseries": "Gráfica de serie temporal",
@@ -203,9 +256,11 @@
 	"srf-ui-eventcalendar-label-week": "Semana",
 	"srf-ui-eventcalendar-label-day": "Día",
 	"srf-ui-eventcalendar-label-allday": "Todo o día",
+	"srf-ui-eventcalendar-label-update-success": "A actualización do calendario de eventos foi correcta.",
+	"srf-ui-eventcalendar-label-update-error": "Fallou a actualización do calendario de eventos.",
 	"srf-printername-dygraphs": "Gráfica dupla",
-	"srf-paramdesc-datasource": "A fonte na que están accesibles os datos. Valores permitidos: file, raw e url. Predeterminado: file",
-	"srf-paramdesc-errorbar": "A barra de erro a utilizar. Valores permitidos: fraction (intervalos de confianza dos valores), sigma (desviación típica dos valores) e range (rangos personalizados de valores)",
+	"srf-paramdesc-datasource": "A fonte na que están accesibles os datos. Valores permitidos: ''file'', ''raw'' e ''url''. Predeterminado: ''file''",
+	"srf-paramdesc-errorbar": "A barra de erro a utilizar. Valores permitidos: ''fraction'' (intervalos de confianza dos valores), ''sigma'' (desviación típica dos valores) e ''range'' (rangos personalizados de valores)",
 	"srf-paramdesc-movingaverage": "Mostrar a media despois dun número de días (\"zero\" ha indicar que a media non se move)",
 	"srf-paramdesc-yaxislabel": "Descrición do eixe Y",
 	"srf-paramdesc-xaxislabel": "Descrición do eixe X",
@@ -229,5 +284,7 @@
 	"srf-ui-mediaplayer-label-repeat": "Repetición",
 	"srf-ui-mediaplayer-label-repeat-off": "Repetición desactivada",
 	"srf-ui-mediaplayer-label-full-screen": "Pantalla completa",
-	"srf-ui-mediaplayer-label-restore-screen": "Restablecer a pantalla"
+	"srf-ui-mediaplayer-label-restore-screen": "Restablecer a pantalla",
+	"srf-excel-link": "Excel",
+	"srf-excel-missing-phpexcel": "Non pode exportarse a MS-Excel porque a extensión [https://www.mediawiki.org/wiki/Extension:PHPExcel PHPExcel] non está instalada."
 }
