--- a/extensions/SemanticResultFormats/i18n/hu.json
+++ b/extensions/SemanticResultFormats/i18n/hu.json
@@ -4,14 +4,17 @@
 			"Dani",
 			"Dj",
 			"Glanthor Reviol",
-			"TK-999"
+			"TK-999",
+			"Csega",
+			"Misibacsi"
 		]
 	},
 	"srf-desc": "További formátumok a Szemantikus MediaWiki beépített lekérdezéseihez",
 	"srf-name": "Szemantikus eredményformátumok",
-	"srf-paramdesc-height": "A diavetítés-widget magassága",
-	"srf-paramdesc-width": "A diavetítés-widget szélessége",
-	"srf-paramdesc-class": "Extra CSS osztály",
+	"srf-module-loading": "Betöltés…",
+	"srf-paramdesc-height": "Magasság",
+	"srf-paramdesc-width": "Szélesség",
+	"srf-paramdesc-class": "Extra CSS osztály megadása",
 	"srfc_previousmonth": "Előző hónap",
 	"srfc_nextmonth": "Következő hónap",
 	"srfc_today": "Ma",
@@ -104,6 +107,9 @@
 	"srf_paramdesc_graphlink": "Grafikon linkje",
 	"srf_paramdesc_graphcolor": "Grafikon színe",
 	"srf-paramdesc-graph-wwl": "Sortörési határ (karakterszám)",
+	"srf-ui-datatables-label-placeholder-column-search": "Keresés...",
+	"srf-ui-datatables-label-sLoadingRecords": "Betöltés...",
+	"srf-ui-datatables-label-sProcessing": "Feldolgozás...",
 	"srf-ui-eventcalendar-label-today": "Ma",
 	"srf-ui-eventcalendar-label-month": "Hónap",
 	"srf-ui-eventcalendar-label-week": "Hét",
