--- a/extensions/SemanticResultFormats/i18n/it.json
+++ b/extensions/SemanticResultFormats/i18n/it.json
@@ -5,13 +5,15 @@
 			"Civvì",
 			"Darth Kule",
 			"F. Cosoleto",
-			"පසිඳු කාවින්ද"
+			"පසිඳු කාවින්ද",
+			"Ankabel",
+			"Macofe"
 		]
 	},
 	"srf-desc": "Formati addizionali per i risultati delle query di Semantic Mediawiki",
 	"srf-name": "Formati di risultato semantici",
-	"prefs-srf-eventcalendar-options": "Opzioni {{INT:Srf-printername-eventcalendar}}",
-	"prefs-srf-datatables-options": "Opzioni {{INT:srf-printername-datatables}}",
+	"prefs-srf-eventcalendar-options": "Opzioni calendario eventi",
+	"prefs-srf-datatables-options": "Opzioni tabelle dati",
 	"srf-module-loading": "Caricamento in corso...",
 	"srf-paramdesc-layout": "Layout disponibili",
 	"srf-paramdesc-height": "Altezza",
@@ -25,7 +27,7 @@
 	"srf-ui-tooltip-title-options": "Opzioni",
 	"srf-error-option-mix": "Opzione ($1) non disponibile",
 	"srf-error-option-link-all": "L'opzione ($1) richiede che il parametro \"link\" sia impostato a \"all\"",
-	"srf-error-missing-layout": "Layout mancante",
+	"srf-error-missing-layout": "Il diagramma o grafico non può essere visualizzato perché il layout è mancante.",
 	"srfc_previousmonth": "Mese precedente",
 	"srfc_nextmonth": "Mese successivo",
 	"srfc_today": "Oggi",
@@ -91,8 +93,13 @@
 	"srf_paramdesc_graphsize": "Dimensione del grafico (in px)",
 	"srf_paramdesc_graphlegend": "Mostra la legenda del grafico o no",
 	"srf_paramdesc_graphlabel": "Etichetta del grafico",
+	"srf-printername-datatables": "Tabelle dati",
 	"srf-ui-datatables-label-conditions": "Condizioni",
 	"srf-ui-datatables-label-parameters": "Parametri",
+	"srf-ui-datatables-label-placeholder-column-search": "Ricerca in corso...",
+	"srf-ui-datatables-label-sLoadingRecords": "Caricamento...",
+	"srf-ui-datatables-label-sProcessing": "Elaborazione...",
+	"srf-filtered-selectorlabel-table": "Tabella",
 	"srf-filtered-selectorlabel-calendar": "Calendario",
 	"srf-paramdesc-group": "Serie raggruppata per",
 	"srf-paramdesc-zoom": "Abilita zoom",
