--- a/extensions/SemanticResultFormats/i18n/ko.json
+++ b/extensions/SemanticResultFormats/i18n/ko.json
@@ -2,7 +2,8 @@
 	"@metadata": {
 		"authors": [
 			"Keysuck",
-			"아라"
+			"아라",
+			"Hwangjy9"
 		]
 	},
 	"srf-module-loading": "불러오는 중…",
@@ -38,5 +39,11 @@
 	"srf_paramdesc_limit": "쿼리할 페이지의 최대 수",
 	"srf_printername_median": "숫자의 중간 값",
 	"srf_printername_earliest": "가장 이른 시간",
-	"srf_printername_latest": "가장 늦은 시간"
+	"srf_printername_latest": "가장 늦은 시간",
+	"srf-filtered-selectorlabel-table": "표",
+	"srf-ui-eventcalendar-format-title-month": "yyyy년 MMMM",
+	"srf-ui-eventcalendar-format-title-week": "[ yyyy년][MMM] d일{ '&#8212;' yyyy년 MMM d일}",
+	"srf-ui-eventcalendar-format-title-day": "yyyy년 MMM d일 dddd",
+	"srf-ui-eventcalendar-format-column-week": "M/d ddd",
+	"srf-ui-eventcalendar-format-column-day": "M/d dddd"
 }
