--- a/extensions/SemanticResultFormats/i18n/ksh.json
+++ b/extensions/SemanticResultFormats/i18n/ksh.json
@@ -6,16 +6,18 @@
 	},
 	"srf-desc": "Zohsäzlejje Fommaate för dem „Semantesch MediaWiki“ sing Froore em Täx vun Sigge.",
 	"srf-name": "Fomaate för wat bei Semantesch Froore eruß kohm",
-	"srfc_previousmonth": "Jangk nohm Moohnd dovör",
-	"srfc_nextmonth": "Jangk nohm näkßte Moohnd",
+	"srfc_previousmonth": "Jangk nohm Mohnd dovör",
+	"srfc_nextmonth": "Jangk nohm nähkßte Mohnd",
 	"srfc_today": "Hück",
-	"srfc_gotomonth": "Jangk noh däm Moohnd",
+	"srfc_gotomonth": "Jangk noh däm Mohnd",
 	"srf_printername_calendar": "Dä Kaländer fum Mohnd",
+	"srf-paramdesc-calendar-startmonth": "Der Mohnd. Der Kaländer es am Aanfang op dä Mohnd enjeschtallt. Schtandadd es dä Mohnd, dä mer jrahd han.",
+	"srf-paramdesc-calendar-startyear": "Et Johr. Der Kaländer es am Aanfang op dat Johr jeschtallt. Schtandadd es dat Johr, woh mer jrahd dren sin.",
 	"srf_vcard_link": "<i lang=\"en\">vCard</i>",
 	"srf_printername_vcard": "Expoot em <i lang=\"en\">vCard</i>-Fommaat",
 	"srf_icalendar_link": "<i lang=\"en\">iCalendar</i>",
 	"srf_printername_icalendar": "Expoot em Fommaat vun <i lang=\"en\">iCalendar</i>",
-	"srf_paramdesc_icalendartitle": "Dä Tittel vun dä Datteij met däm Kalländer",
+	"srf_paramdesc_icalendartitle": "De Övverschreff vun dä Datteij met däm Kalländer",
 	"srf_paramdesc_icalendardescription": "Wi de Datteij met däm Kalländer beschrevve es",
 	"srf_printername_bibtex": "Expoot em <i lang=\"en\">BibTeX</i>-Fommaat",
 	"srf_outline_novalue": "Keine Wäät",
@@ -40,6 +42,8 @@
 	"srf_printername_googlepie": "E Kreijß-Dijajramm vun <i lang=\"en\">Google</i>",
 	"srf_paramdesc_chartheight": "Dämm Dijajramm sing Hühde en Pixelle",
 	"srf_paramdesc_chartwidth": "Dämm Dijajramm sing Breedt en Pixelle",
+	"srf_paramdesc_headersep": "Et Trännzeijschen zwesche dä nahme för Eijschaffte un däm Wäät för en Eijeschaff, wann dä Parramehter <code lang=\"en\" xml:lang=\"en\" dir=\"ltr\">headers</code> obb ene Wäät „<code lang=\"en\" xml:lang=\"en\" dir=\"ltr\">show</code>“ udder „<code lang=\"en\" xml:lang=\"en\" dir=\"ltr\">plain</code>“ jesaz weed.",
+	"srf-printername-graph": "Dijajramm",
 	"srf_printername_ultree": "ene Boum met Leßte met Pongkte",
 	"srf_printername_oltree": "ene Boum met Leßte met Nommere"
 }
