--- a/extensions/SemanticResultFormats/i18n/nb.json
+++ b/extensions/SemanticResultFormats/i18n/nb.json
@@ -2,12 +2,49 @@
 	"@metadata": {
 		"authors": [
 			"Event",
-			"Nghtwlkr"
+			"Nghtwlkr",
+			"Emilbk"
 		]
 	},
-	"srf-desc": "Tilleggsformater for Semantic MediaWiki «inline»-spørringer",
+	"srf-desc": "Tilleggsformater for Semantic MediaWiki-spørringer",
 	"srf-name": "Semantisk resultatformat",
-	"srf-warn-empy-chart": "Diagrammet vises ikke fordi det ikke finnes resultater som kan presenteres.",
+	"prefs-srf": "Semantic Result Formats",
+	"srf-prefs-intro-text": "Du har installert utvidelsen Semantic Result Formats. For ytterligere assistanse kan du se på [https://www.semantic-mediawiki.org/wiki/Help:Result_formats result formats] hjelpsiden.",
+	"prefs-srf-eventcalendar-options": "Valgmuligheter i hendelseskalenderen.",
+	"srf-prefs-eventcalendar-options-update-default": "Aktiviser [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates automatiske oppdateringer] av kalenderhendelser ved sideoppdatering",
+	"srf-prefs-eventcalendar-options-paneview-default": "Aktiviser panelvisning som standard",
+	"prefs-srf-datatables-options": "DataTables-valgmuligheter",
+	"srf-prefs-datatables-options-update-default": "Aktiviser [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates automatiske oppdateringer] av tabellinnhold ved sideoppdatering",
+	"srf-prefs-datatables-options-cache-default": "Aktiviser [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage lokal lagring] for å forbedre responstiden",
+	"srf-module-loading": "Laster...",
+	"srf-paramdesc-layout": "Tilgjengelige visninger",
+	"srf-paramdesc-height": "Høyde",
+	"srf-paramdesc-width": "Bredde",
+	"srf-paramdesc-class": "Angi en CSS-klasse til",
+	"srf-module-nomatch": "Ingen treff",
+	"srf-paramdesc-charttype": "Tilgjengelige diagramtyper",
+	"srf-navigation-previous": "Forrige",
+	"srf-ui-navigation-prev": "Forrige",
+	"srf-ui-navigation-next": "Neste",
+	"srf-ui-common-label-source": "Kilde",
+	"srf-ui-common-label-datasource": "Datakilde",
+	"srf-ui-common-label-ajax-error": "Serveren rapporte feil i kommunikasjonen for denne $1. Vær vennlig å oppdatere siden eller sjekk med denne $2.",
+	"srf-ui-common-label-request-object": "etterspurt objekt",
+	"srf-ui-common-label-help-section": "hjelpeavsnitt",
+	"srf-ui-tooltip-title-options": "Valgmuligheter",
+	"srf-ui-tooltip-title-scope": "Avgrensning",
+	"srf-ui-tooltip-title-legend": "Tegnforklaring",
+	"srf-ui-tooltip-title-filter": "Filter",
+	"srf-ui-common-label-refresh": "Oppdater",
+	"srf-ui-common-label-parameters": "Parametre",
+	"srf-ui-common-label-query": "Spørring",
+	"srf-ui-common-label-paneview": "Panelvisning",
+	"srf-ui-common-label-daterange": "Datoområde",
+	"srf-ui-widgets-label-parameter-limit": "Grenseparameter",
+	"srf-error-option-mix": "Valgmulighet ($1) er ikke tilgjengelig",
+	"srf-error-option-link-all": "Valgmulighet ($1) krever at parameter \"link\" settes til \"all\"",
+	"srf-error-missing-layout": "Visningsutforming mangler",
+	"srf-warn-empy-chart": "Diagrammet er tomt fordi det ikke finnes data som kan presenteres.",
 	"srfc_previousmonth": "Forrige måned",
 	"srfc_nextmonth": "Neste måned",
 	"srfc_today": "I dag",
@@ -15,6 +52,8 @@
 	"srf_printername_calendar": "Månedlig kalender",
 	"srf_paramdesc_calendarlang": "Språkkoden for språket som kalenderen skal vises i",
 	"srf_paramdesc_calendarcolors": "Fargen som vil brukes for hver datoegenskap (eksempel: \"Start date=>green,End date=>#09c\")",
+	"srf-paramdesc-calendar-startmonth": "Måneden kalendervisningen blir initialisert med (standard er inneværende måned)",
+	"srf-paramdesc-calendar-startyear": "Året kalenderenvisningen blir initialisert med (standard er inneværende år)",
 	"srf_printername_vcard": "vCard-eksport",
 	"srf_icalendar_link": "iKalender",
 	"srf_printername_icalendar": "iCalendar-eksport",
@@ -48,12 +87,17 @@
 	"srf_paramdesc_lens": "Navnet på malen som skal vise frem sideegenskapene",
 	"srf_printername_googlebar": "Google stolpediagram",
 	"srf_printername_googlepie": "Google kakediagram",
-	"srf_paramdesc_chartheight": "Høyden til diagrammet, i piksler",
-	"srf_paramdesc_chartwidth": "Bredden til diagrammet, i piksler",
+	"srf-printername-jqplotchart": "jqPlot-diagram",
+	"srf-printername-jqplotseries": "jqPlot-rekke",
+	"srf_paramdesc_chartheight": "Angi diagrammets høyde, i piksler",
+	"srf_paramdesc_chartwidth": "Angi diagrammes bredde, i piksler",
 	"srf_paramdesc_charttitle": "Tittelen på diagrammet",
 	"srf_paramdesc_barcolor": "Fargen på stolpene",
 	"srf_paramdesc_bardirection": "Angi diagramretning",
+	"srf-paramdesc-direction": "Angi diagrammets retning",
 	"srf_paramdesc_barnumbersaxislabel": "Etiketten for tallaksen",
+	"srf-paramdesc-labelaxislabel": "Etiketten for tallaksen",
+	"srf-paramdesc-ticklabels": "Vis akseverdier",
 	"srf-paramdesc-minvalue": "Minimumsverdi på Y-aksen",
 	"srf-paramdesc-pointlabels": "Visning diagramspesifikke datapunkter",
 	"srf-paramdesc-chartlegend": "Diagramforklaringsposisjon",
@@ -71,6 +115,17 @@
 	"srf-paramdesc-stackseries": "Vis diagrammet som en stablet rekke",
 	"srf-paramdesc-seriesgroup": "Velg rekkegruppering",
 	"srf-paramdesc-serieslabel": "Angi rekke-etiketter",
+	"srf-paramdesc-grouplabel": "Angi gruppe-etikett",
+	"srf-paramdesc-chartcursor": "Visningsvalg for diagrampekere",
+	"srf-paramdesc-trendline": "Aktiviser samtidig visning av diagram og tendenslinje",
+	"srf-paramdesc-gridview": "Vis diagram og datasett samtidig. Tillatte verdier: \"none\" og \"tabs\". Standardverdi: \"none\".",
+	"srf-paramdesc-infotext": "Vis tilleggsinformasjon på en tilhørende info-fane",
+	"srf-ui-gridview-label-item": "Dataelement",
+	"srf-ui-gridview-label-value": "Dataverdi",
+	"srf-ui-gridview-label-series": "Datarekke",
+	"srf-ui-gridview-label-chart-tab": "Diagram",
+	"srf-ui-gridview-label-data-tab": "Data",
+	"srf-ui-gridview-label-info-tab": "Info",
 	"srf_printername_gallery": "Galleri",
 	"srf_paramdesc_perrow": "Antall bilder per rad",
 	"srf_paramdesc_widths": "Bredde på bildene",
@@ -79,6 +134,13 @@
 	"srf_paramdesc_fileextensions": "Hvis filnavn brukes som figurtekst, vis også filtypen",
 	"srf_paramdesc_captionproperty": "Som figurtekst brukes navnet på den semantiske egenskapen tilgjengelig på sidene med spørringer",
 	"srf_paramdesc_imageproperty": "Navnet på en semantisk egenskap for sidene med spørringer som peker to bilder som skal brukes. Hvis satt, blir sidene med spørringer ikke selv vist frem som bilder.",
+	"srf-paramdesc-redirects": "Navnet på en semantisk egenskap til stede på spørringssidene som inneholder omdirigeringsmålet",
+	"srf-paramdesc-navigation": "Navigering for resultatutforming",
+	"srf-paramdesc-overlay": "Aktiviser lagdeling av bilder",
+	"srf-gallery-navigation-previous": "Forrige",
+	"srf-gallery-navigation-next": "Neste",
+	"srf-gallery-overlay-count": "Bilde $1 av $2",
+	"srf-gallery-image-url-error": "Bildet ble ikke funnet",
 	"srf_printername_tagcloud": "Tagg-sky",
 	"srf_paramdesc_includesubject": "Hvis emnetekstene selv bør være med",
 	"srf_paramdesc_increase": "Hvordan du øker størrelsen på taggene",
@@ -87,6 +149,7 @@
 	"srf_paramdesc_minsize": "Størrelsen på de minste taggene i prosent",
 	"srf_paramdesc_maxsize": "Størrelsen på de største taggene i prosent",
 	"srf_paramdesc_maxtags": "Minste antall tagger i skyen",
+	"srf-paramdesc-excludetags": "Ekskluder (skilletegn: \";\")",
 	"srf_printername_valuerank": "Verdirangering",
 	"srf_printername_array": "Array",
 	"srf_paramdesc_pagetitle": "Angi om sidetitlene skal vises eller skjules i resultatlisten",
@@ -111,9 +174,90 @@
 	"srf_paramdesc_graphcolor": "Graf-farge",
 	"srf-paramdesc-graph-wwl": "Maksimal lengde av tekstlinje",
 	"srf-printername-datatables": "Datatabeller",
+	"srf-ui-datatables-label-conditions": "Betingelser",
+	"srf-ui-datatables-label-parameters": "Parametre",
+	"srf-ui-datatables-label-filters": "Kolonnefiltre og søk",
+	"srf-ui-datatables-label-information": "Informasjon",
+	"srf-ui-datatables-panel-disclaimer": "Parametre og betingelser kan endres, men slike endringer er midlertidige og borte etter en sideoppdatering.",
+	"srf-ui-datatables-label-update-success": "Tabelloppdateringen var vellykket",
+	"srf-ui-datatables-label-update-error": "Tabelloppdateringen var mislykket",
+	"srf-ui-datatables-label-placeholder-column-search": "Søk...",
+	"srf-ui-datatables-label-content-cache": "Innholdet ble hentet fra det lokale mellomlagret.",
+	"srf-ui-datatables-label-content-server": "Innholdet ble hentet fra serveren.",
+	"srf-ui-datatables-label-multiselect-column-header": "Tilgjengelige kolonner",
+	"srf-ui-datatables-label-multiselect-column-noneselectedtext": "Filterinnstillinger",
+	"srf-ui-datatables-label-multiselect-column-selectedtext": "Kolonner er synlige",
+	"srf-ui-datatables-label-sEmptyTable": "Ingen data tilgjengelige i tabellen",
+	"srf-ui-datatables-label-sInfo": "Viser _START_ to _END_ of _TOTAL_ punkter",
+	"srf-ui-datatables-label-sInfoEmpty": "Viser 0 til 0 av 0 punkter",
+	"srf-ui-datatables-label-sInfoFiltered": "(filtrert fra _MAX_ samlede punkter)",
+	"srf-ui-datatables-label-sInfoThousands": "&nbsp;",
+	"srf-ui-datatables-label-sLengthMenu": "Vis _MENU_ punkter",
+	"srf-ui-datatables-label-sLoadingRecords": "Laster...",
+	"srf-ui-datatables-label-sProcessing": "Behandler...",
+	"srf-ui-datatables-label-sSearch": "Søk:",
+	"srf-ui-datatables-label-sZeroRecords": "Ingen samsvarende poster ble funnet",
+	"srf-ui-datatables-label-oPaginate-sFirst": "Første",
+	"srf-ui-datatables-label-oPaginate-sLast": "Siste",
+	"srf-ui-datatables-label-oPaginate-sNext": "Neste",
+	"srf-ui-datatables-label-oPaginate-sPrevious": "Forrige",
+	"srf-ui-datatables-label-oAria-sSortAscending": ": aktiviser for å sortere kolonne stigende",
+	"srf-ui-datatables-label-oAria-sSortDescending": ": aktiviser for å sortere kolonne synkende",
 	"srf_printername_tree": "Tre",
 	"srf_printername_ultree": "Unummerert tre",
 	"srf_printername_oltree": "Nummerert tre",
 	"srf-noparentprop": "Ingen foreldreegenskap er oppgitt. Treet kan ikke bygges uten en slik.",
-	"srf-paramdesc-parent": "Egenskapen som inneholder foreldresiden"
+	"srf-rootinvalid": "$1 er ikke en gyldig sidetittel.",
+	"srf-paramdesc-parent": "Egenskapen som inneholder foreldresiden",
+	"srf-paramdesc-root": "Rotsiden av treet",
+	"srf-paramdesc-startlevel": "Startnivået til treet, f.eks. for å kunne integrere det med et annet tre",
+	"srf-paramdesc-delay": "Forsinkelsen mellom bilder i sekunder",
+	"srf-paramdesc-navigation-controls": "Vis navigasjonskontroller eller ikke",
+	"srf-paramdesc-effect": "Effekten som brukes ved bytte mellom bilder",
+	"srf-printername-filtered": "Filtrert",
+	"srf-paramdesc-filtered-views": "Visningene som skal være tilgjengelige i resultatvisningen",
+	"srf-paramdesc-filtered-filter-position": "Posisjonen av filtrene i relasjon til visningene. Tillatte verdier: \"top\", \"bottom\". Standard: \"top\".",
+	"srf-paramdesc-filtered-list-type": "Typen liste. Tillatte verdier: \"list\", \"ul\", \"ol\". Standard: \"list\".",
+	"srf-paramdesc-filtered-list-template": "Malen som skal brukes for å formatere listeoppføringene",
+	"srf-paramdesc-filtered-list-named-args": "Navngi parametrene som skal sendes til malen.",
+	"srf-paramdesc-filtered-list-introtemplate": "Navnet på en mal som skal vises før spørringsresultatene, hvis det er noen.",
+	"srf-paramdesc-filtered-list-outrotemplate": "Navnet på en mal som skal vises etter spørringsresultatene, hvis det er noen.",
+	"srf-paramdesc-filtered-calendar-title-template": "En mal som brukes til å formatere hendelsens tittel i kalenderen",
+	"srf-filtered-selectorlabel-list": "Liste",
+	"srf-filtered-selectorlabel-calendar": "Kalender",
+	"srf-printername-d3chart": "D3 diagram",
+	"srf-printername-timeseries": "Tidsseriediagram",
+	"srf-paramdesc-group": "Serier gruppert etter",
+	"srf-paramdesc-zoom": "Aktiver zoom",
+	"srf-paramdesc-datatable": "Aktiver en datatabell",
+	"srf-timeseries-zoom-out-of-range": "Zoomnivået gav ingen (eller ikke tilstrekkelig) med data",
+	"srf-printername-sparkline": "Sparkline diagram",
+	"srf-printername-listwidget": "Listwidget",
+	"srf-paramdesc-listtype": "Spesifiser listetypen",
+	"srf-paramdesc-widget": "Tilgjengelig widget",
+	"srf-paramdesc-pageitems": "Elementer per side",
+	"srf-paramdesc-calendarfirstday": "Første dag i uken",
+	"srf-paramdesc-calendardefaultview": "Første visning når kalenderen lastes",
+	"srf-paramdesc-calendarstart": "Startdato for kalenderen (dato- eller dato/tid-verdi)",
+	"srf-paramdesc-calendarlegend": "Spesifiser posisjonen til legenden og tildelte filtervalg",
+	"srf-paramdesc-dayview": "Aktiver dagvisning ved å klikke på nummeret for dagen",
+	"srf-ui-eventcalendar-label-today": "I dag",
+	"srf-ui-eventcalendar-label-month": "Måned",
+	"srf-ui-eventcalendar-label-week": "Uke",
+	"srf-ui-eventcalendar-label-day": "Dag",
+	"srf-ui-eventcalendar-label-allday": "Hele dagen",
+	"srf-printername-dygraphs": "Dygraphs-diagram",
+	"srf-ui-mediaplayer-label-previous": "Forrige",
+	"srf-ui-mediaplayer-label-play": "Spill av",
+	"srf-ui-mediaplayer-label-pause": "Pause",
+	"srf-ui-mediaplayer-label-next": "Neste",
+	"srf-ui-mediaplayer-label-stop": "Stopp",
+	"srf-ui-mediaplayer-label-mute": "Lyd av",
+	"srf-ui-mediaplayer-label-unmute": "Lyd på",
+	"srf-ui-mediaplayer-label-volume-max": "Maks. volum",
+	"srf-ui-mediaplayer-label-shuffle": "Miks",
+	"srf-ui-mediaplayer-label-shuffle-off": "Miks av",
+	"srf-ui-mediaplayer-label-repeat": "Repeter",
+	"srf-ui-mediaplayer-label-repeat-off": "Repeter av",
+	"srf-ui-mediaplayer-label-full-screen": "Fullskjerm"
 }
