--- a/extensions/SemanticResultFormats/i18n/nl.json
+++ b/extensions/SemanticResultFormats/i18n/nl.json
@@ -7,13 +7,14 @@
 			"Rcdeboer",
 			"SPQRobin",
 			"Siebrand",
-			"Southparkfan"
+			"Southparkfan",
+			"Sjoerddebruin"
 		]
 	},
-	"srf-desc": "Aanvullende formaten voor inline zoekopdrachten via Semantic MediaWiki",
+	"srf-desc": "Extra resultaatopmaken voor zoekopdrachten van Semantic MediaWiki",
 	"srf-name": "Semantische resultaatopmaken",
 	"prefs-srf": "Semantische resultaatopmaken",
-	"srf-prefs-intro-text": "U heeft de uitbreiding Semantic Result Formats geïnstalleerd, die op dit moment geen instelbare gebruikersopties heeft. Raadpleeg de hulppagina voor [http://www.semantic-mediawiki.org/wiki/Help:Result_formats resultaatopmaken] voor meer informatie.",
+	"srf-prefs-intro-text": "U heeft de uitbreiding Semantic Result Formats geïnstalleerd. Raadpleeg de hulppagina voor [https://www.semantic-mediawiki.org/wiki/Help:Result_formats resultaatopmaken] voor meer informatie.",
 	"srf-module-loading": "Bezig met laden…",
 	"srf-paramdesc-layout": "Beschikbare opmaak",
 	"srf-paramdesc-height": "Hoogte",
@@ -168,7 +169,7 @@
 	"srf_printername_ultree": "Ongenummerde lijst",
 	"srf_printername_oltree": "Genummerde lijst",
 	"srf-noparentprop": "Er is geen bovenliggende eigenschap opgegeven. De boom kan niet opgebouwd worden zonder een bovenliggende eigenschap.",
-	"srf-rootinvalid": "$1 is geen geldige paginatitel.",
+	"srf-rootinvalid": "$1 is geen geldige paginanaam.",
 	"srf-paramdesc-parent": "De eigenschap die de bovenliggende pagina bevat",
 	"srf-printername-slideshow": "Diapresentatie",
 	"srf-paramdesc-delay": "De vertraging tussen dia's in seconden",
@@ -184,6 +185,7 @@
 	"srf-paramdesc-filtered-list-outrotemplate": "De naam van een sjabloon om na de resultaten van de zoekopdracht weer te geven, als er resultaten zijn.",
 	"srf-paramdesc-filtered-calendar-title-template": "Een sjabloon dat wordt gebruikt om de naam van een gebeurtenis in de kalender weer te geven",
 	"srf-filtered-selectorlabel-list": "Lijst",
+	"srf-filtered-selectorlabel-table": "Tabel",
 	"srf-filtered-selectorlabel-calendar": "Kalender",
 	"srf-printername-d3chart": "D3-grafiek",
 	"srf-printername-timeseries": "Tijdseriegrafiek",
