--- a/extensions/SemanticResultFormats/i18n/pt-br.json
+++ b/extensions/SemanticResultFormats/i18n/pt-br.json
@@ -13,10 +13,10 @@
 	"srf-name": "Semantic Result Formats",
 	"prefs-srf": "Formatos de resultado semântico",
 	"srf-prefs-intro-text": "Você instalou a extensão Semantic Result Formats. Para mais informações, por favor visite as [https://www.semantic-mediawiki.org/wiki/Help:Result_formats páginas de ajuda dos formatos de resultado].",
-	"prefs-srf-eventcalendar-options": "Opções de {{INT:Srf-printername-eventcalendar}}",
+	"prefs-srf-eventcalendar-options": "Opções do calendário de eventos",
 	"srf-prefs-eventcalendar-options-update-default": "Habilitar as [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates atualizações automáticas] dos eventos de calendário durante a atualização da página",
 	"srf-prefs-eventcalendar-options-paneview-default": "Habilite a exibição do painel por padrão",
-	"prefs-srf-datatables-options": "Opções de {{INT:srf-printername-datatables}}",
+	"prefs-srf-datatables-options": "Opções do DataTables",
 	"srf-prefs-datatables-options-update-default": "Habilitar as [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates atualizações automáticas] do conteúdo da tabela durante a atualização da página",
 	"srf-prefs-datatables-options-cache-default": "Habilitar o [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage armazenamento local] para melhorar o tempo de resposta",
 	"srf-module-loading": "Carregando...",
@@ -55,6 +55,8 @@
 	"srf_printername_calendar": "Calendário mensal",
 	"srf_paramdesc_calendarlang": "O código de idioma em que será apresentado o calendário",
 	"srf_paramdesc_calendarcolors": "A cor a ser exibida para cada propriedade de data (exemplo: \"Start date=>green,End date=>#09c\")",
+	"srf-paramdesc-calendar-startmonth": "O mês com o qual a exibição do calendário é inicializada (o padrão é o mês atual)",
+	"srf-paramdesc-calendar-startyear": "O ano com o qual a exibição do calendário é inicializada (o padrão é o ano atual)",
 	"srf_printername_vcard": "Exportar vCard",
 	"srf_printername_icalendar": "Exportar iCalendar",
 	"srf_paramdesc_icalendartitle": "O título do arquivo do calendário",
@@ -119,6 +121,7 @@
 	"srf-paramdesc-chartcursor": "Opção de exibição do cursor gráfico",
 	"srf-paramdesc-trendline": "Habilita a exibição simultânea de um gráfico e suas linhas de tendência",
 	"srf-paramdesc-gridview": "Exibe simultaneamente o gráfico e os conjuntos de dados. Valores permitidos: \"none\" e \"tabs\". Padrão: \"none\".",
+	"srf-paramdesc-paneview": "Especifica a posição do quadro que contém um pequeno gráfico de linha. Os valores permitidos são: \"bottom\", \"top\" e \"none\". Padrão: \"bottom\"",
 	"srf-paramdesc-infotext": "Exibe informações adicionais em uma aba correspondente",
 	"srf-ui-gridview-label-item": "Item dos dados",
 	"srf-ui-gridview-label-value": "Valor dos dados",
@@ -228,6 +231,7 @@
 	"srf-paramdesc-filtered-calendar-title": "A exibição que contém o título de um evento. Não pode ser utilizado junto com um título de uma predefinição.",
 	"srf-paramdesc-filtered-calendar-title-template": "Uma predefinição utilizada para formatar o título do evento no calendário",
 	"srf-filtered-selectorlabel-list": "Lista",
+	"srf-filtered-selectorlabel-table": "Tabela",
 	"srf-filtered-selectorlabel-calendar": "Calendário",
 	"srf-printername-d3chart": "Gráfico D3",
 	"srf-printername-timeseries": "Gráfico de séries temporais",
