--- a/extensions/SemanticResultFormats/i18n/ru.json
+++ b/extensions/SemanticResultFormats/i18n/ru.json
@@ -8,21 +8,25 @@
 			"Pastakhov",
 			"Александр Сигачёв",
 			"Okras",
-			"Meshkov.a"
+			"Meshkov.a",
+			"Alexandr Efremov"
 		]
 	},
 	"srf-desc": "Дополнительные форматы вывода для запросов Semantic MediaWiki",
 	"srf-name": "Semantic Result Formats",
 	"prefs-srf": "Semantic Result Formats",
 	"srf-prefs-intro-text": "У вас установлено расширение «Semantic Result Formats». Для получения дополнительной помощи, пожалуйста, посетите страницу [http://www.semantic-mediawiki.org/wiki/Help:Форматы_вывода Форматы вывода].",
-	"prefs-srf-eventcalendar-options": "Настройки {{INT:Srf-printername-eventcalendar}}",
+	"prefs-srf-eventcalendar-options": "Календарь событий параметры",
 	"srf-prefs-eventcalendar-options-update-default": "Включить [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates автоматическое обновление] событий календаря при обновлении страницы",
-	"prefs-srf-datatables-options": "Настройки {{INT:srf-printername-datatables}}",
+	"srf-prefs-eventcalendar-options-paneview-default": "Включить по умолчанию вид клеточками",
+	"prefs-srf-datatables-options": "Настройки DataTables",
 	"srf-prefs-datatables-options-update-default": "Включить [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates автоматическое обновление] содержания при обновлении страницы",
 	"srf-prefs-datatables-options-cache-default": "Включить [https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage локальный том хранения], чтобы улучшить время отклика",
 	"srf-module-loading": "Загрузка...",
+	"srf-paramdesc-layout": "Доступен макет",
 	"srf-paramdesc-height": "Высота",
 	"srf-paramdesc-width": "Ширина",
+	"srf-paramdesc-class": "Указать дополнительный класс CSS",
 	"srf-module-nomatch": "Совпадений не найдено",
 	"srf-paramdesc-charttype": "Доступные типы диаграмм",
 	"srf-navigation-previous": "Предыдущий",
@@ -30,17 +34,22 @@
 	"srf-ui-navigation-next": "След.",
 	"srf-ui-common-label-source": "Источник",
 	"srf-ui-common-label-datasource": "Источник данных",
-	"srf-ui-common-label-ajax-error": "Сервер сообщил о неудачной связи с $1. Пожалуйста, попробуйте обновить страницу или обратитесь с этим к $2.",
+	"srf-ui-common-label-ajax-error": "Сервер сообщил о неудачной связи с $1. Пожалуйста, попробуйте обновить страницу или обратитесь с этим в $2.",
+	"srf-ui-common-label-request-object": "объект запроса",
 	"srf-ui-common-label-help-section": "раздел справки",
 	"srf-ui-tooltip-title-options": "Параметры",
+	"srf-ui-tooltip-title-scope": "Сфера",
 	"srf-ui-tooltip-title-legend": "Легенда",
 	"srf-ui-tooltip-title-filter": "Фильтр",
 	"srf-ui-common-label-refresh": "Обновить",
 	"srf-ui-common-label-parameters": "Параметры",
 	"srf-ui-common-label-query": "Запрос",
+	"srf-ui-common-label-paneview": "Вид панели",
 	"srf-ui-common-label-daterange": "Диапазон дат",
+	"srf-ui-widgets-label-parameter-limit": "Параметр лимита",
 	"srf-error-option-mix": "Параметр ( $1 ) не доступен",
 	"srf-error-option-link-all": "Опция ($1) требует, чтобы параметр «link» был задан как «all»",
+	"srf-error-missing-layout": "Диаграмма или график не могут быть показаны, поскольку макет отсутствует.",
 	"srf-warn-empy-chart": "Диаграммы или графика пуст из-за недостающих данных",
 	"srfc_previousmonth": "Предыдущий месяц",
 	"srfc_nextmonth": "Следующий месяц",
@@ -48,6 +57,7 @@
 	"srfc_gotomonth": "Перейти к месяцу",
 	"srf_printername_calendar": "Ежемесячный календарь",
 	"srf_paramdesc_calendarlang": "Код языка, на котором отображать календарь",
+	"srf_paramdesc_calendarcolors": "Цвет, которым показывать каждое свойство даты (например: \"Start date =>green,End date=>#09c\")",
 	"srf_printername_vcard": "Экспорт vCard",
 	"srf_icalendar_link": "iКалендарь",
 	"srf_printername_icalendar": "Экспорт iCalendar",
@@ -62,6 +72,8 @@
 	"srf_printername_max": "Максимальное число",
 	"srf_printername_min": "Минимальное число",
 	"srf_paramdesc_limit": "Максимальное количество страниц для выборки",
+	"srf_printername_product": "Произведение цифр",
+	"srf_printername_median": "Медиана чисел",
 	"srf-paramdesc-default": "Значение по умолчанию, которое будет отображаться когда нет численных результатов",
 	"srf_printername_earliest": "Раннее время",
 	"srf_printername_latest": "Позднее время",
@@ -79,6 +91,8 @@
 	"srf_paramdesc_lens": "Название шаблона для отображения свойств страницы",
 	"srf_printername_googlebar": "Столбчатая диаграмма Google",
 	"srf_printername_googlepie": "Круговая диаграмма Google",
+	"srf-printername-jqplotchart": "диаграмма jqPlot",
+	"srf-printername-jqplotseries": "серия jqPlot",
 	"srf_paramdesc_chartheight": "Укажите высоту (в пикселях) диаграммы или графика",
 	"srf_paramdesc_chartwidth": "Указать ширину (в пикселах или процентах) диаграммы или графика",
 	"srf_paramdesc_charttitle": "Название диаграммы",
@@ -91,13 +105,24 @@
 	"srf-paramdesc-minvalue": "Минимальное значение на оси y",
 	"srf-paramdesc-pointlabels": "Отображение точек данных в диаграмме",
 	"srf-paramdesc-chartlegend": "Положение легенды диаграммы",
+	"srf-paramdesc-datalabels": "Подписи данных диаграммы/графика",
 	"srf-paramdesc-charttext": "Текст описания диаграммы",
 	"srf-paramdesc-chartclass": "Дополнительный CSS-класс",
+	"srf-paramdesc-renderer": "Выберите визуализацию графика/диаграммы",
+	"srf-paramdesc-filling": "Индивидуальная опция заполнения",
 	"srf-paramdesc-theme": "Выберите тему сетки",
+	"srf-paramdesc-chartcolor": "Назначить отдельные цвета диаграммы",
 	"srf-paramdesc-colorscheme": "Выберите цветовую схему",
 	"srf-paramdesc-valueformat": "Укажите правило форматирования для значений",
 	"srf-paramdesc-highlighter": "Отображать маркер точки данных",
 	"srf-paramdesc-smoothlines": "Применять алгоритм сглаживания на графиках",
+	"srf-paramdesc-stackseries": "Отобразить диаграммы в виде составленной серии",
+	"srf-paramdesc-seriesgroup": "Выберите группировки серии",
+	"srf-paramdesc-serieslabel": "Определите ярлык серии",
+	"srf-paramdesc-grouplabel": "Определите ярлык группы",
+	"srf-paramdesc-chartcursor": "Параметры отображения указателя диаграммы",
+	"srf-paramdesc-trendline": "Включить одновременное отображение диаграммы и ее линии тренда",
+	"srf-paramdesc-gridview": "Отобразить диаграмму и наборы данных одновременно. Допустимые значения: «none» и «tabs». По умолчанию: «none»",
 	"srf-paramdesc-infotext": "Отображать дополнительную информацию на соответствующей вкладке",
 	"srf-ui-gridview-label-item": "Элемент данных",
 	"srf-ui-gridview-label-value": "Значение данных",
@@ -111,18 +136,53 @@
 	"srf_paramdesc_heights": "Высота изображений",
 	"srf_paramdesc_autocaptions": "Использовать имя файла в качестве заголовка, когда другое не предоставлено",
 	"srf_paramdesc_fileextensions": "При использовании имя файла в качестве заголовка, отображать также расширение файла",
+	"srf_paramdesc_captionproperty": "Название семантического свойства, присутствующих на запрашиваемых страницах, которые будут использованы в качестве заголовка",
+	"srf_paramdesc_imageproperty": "Название семантического свойства присутствующих на запрашиваемых страницах, которые нужно использовать. Если указана, запрошенные страницы не отображаются как изображение",
+	"srf-paramdesc-redirects": "Название семантического свойства, присутствующие на запрошенных страницах, содержащие перенаправления",
+	"srf-paramdesc-navigation": "Управление навигацией макета",
+	"srf-paramdesc-overlay": "Разрешить наложение изображения",
 	"srf-gallery-navigation-previous": "Предыдущая",
 	"srf-gallery-navigation-next": "Следующая",
 	"srf-gallery-overlay-count": "Изображение $1 из $2",
 	"srf-gallery-image-url-error": "Изображение не найдено.",
 	"srf_printername_tagcloud": "Облако меток",
+	"srf_paramdesc_includesubject": "Должны быть включены названия субъектов",
+	"srf_paramdesc_increase": "Как увеличить размер тегов",
 	"srf_paramdesc_tagorder": "Порядок тегов",
+	"srf_paramdesc_mincount": "Минимальное количество раз появление значения, после которых оно попадает в список",
+	"srf_paramdesc_minsize": "Размер наименьших тегов в процентах",
+	"srf_paramdesc_maxsize": "Размер наибольших тегов в процентах",
+	"srf_paramdesc_maxtags": "Максимальное количество тегов в облаке",
+	"srf-paramdesc-excludetags": "Исключить теги (разделитель: \";\")",
+	"srf_printername_valuerank": "Ранг значения",
 	"srf_printername_array": "Массив",
+	"srf_paramdesc_pagetitle": "Следует ли отражать заголовки страниц как результирующие записи или пропускать их",
+	"srf_paramdesc_hidegaps": "Печатать запрошенную, следующие свойства и значения записей, разделенных разделителями, или пропускать их",
+	"srf_paramdesc_arrayname": "Если подано и ArrayExtension доступно, то будет создавать массив с указанным названием (ни видимого на выходе)",
+	"srf_paramdesc_propsep": "Разделитель между востребованными свойствами",
+	"srf_paramdesc_manysep": "Разделитель между многими оцененными значениями свойств",
+	"srf_paramdesc_recordsep": "Разделитель между значениями свойств записей",
+	"srf_paramdesc_headersep": "Разделитель между названием свойства и значением, если \"headers\" установлен в \"show\" или \"plain\"",
+	"srf_printername_hash": "Хэш",
+	"srf_paramdesc_hashname": "Если указано, и доступно расширение Hash Tables, это создаст хэш поданному названием (ни видимого выхода)",
+	"srf-printername-graph": "График",
+	"srf-paramdesc-graph-relation": "Предметы или свойства названий родительские или дочерние?",
+	"srf-paramdesc-graph-nameprop": "Позволяет устанавливать свойство, будет использована как предмет вместо нынешнего предмета",
+	"srf-paramdesc-graph-nodeshape": "Форма каждого узла графы",
 	"srf_paramdesc_graphname": "Заголовок",
+	"srf_paramdesc_graphsize": "Размер графы (в пикселях)",
+	"srf_paramdesc_graphlegend": "Показывать легенду или нет?",
+	"srf_paramdesc_graphlabel": "Подпись графы",
+	"srf_paramdesc_rankdir": "Направление стрелки",
+	"srf_paramdesc_graphlink": "Ссылка графы",
+	"srf_paramdesc_graphcolor": "Цвет графы",
+	"srf-paramdesc-graph-wwl": "Предел переноса слов (в # символов)",
+	"srf-printername-datatables": "Таблицы данных",
 	"srf-ui-datatables-label-conditions": "Условия",
 	"srf-ui-datatables-label-parameters": "Параметры",
 	"srf-ui-datatables-label-filters": "Фильтры столбцов и поиск",
 	"srf-ui-datatables-label-information": "Информация",
+	"srf-ui-datatables-panel-disclaimer": "Параметры и условия могут быть изменены, но любое изменение временное и сбрасывается после обновления страницы.",
 	"srf-ui-datatables-label-update-success": "Обновление таблицы прошло успешно",
 	"srf-ui-datatables-label-update-error": "Обновление таблицы не удалось.",
 	"srf-ui-datatables-label-placeholder-column-search": "Поиск…",
@@ -132,7 +192,11 @@
 	"srf-ui-datatables-label-multiselect-column-noneselectedtext": "Настройки фильтра",
 	"srf-ui-datatables-label-multiselect-column-selectedtext": "Отображаемые столбцы",
 	"srf-ui-datatables-label-sEmptyTable": "Данные отсутствуют в таблице",
+	"srf-ui-datatables-label-sInfo": "Отображение записей от _START_ до _END_ с _TOTAL_",
+	"srf-ui-datatables-label-sInfoEmpty": "Показаны от 0 до 0 из 0 записей",
+	"srf-ui-datatables-label-sInfoFiltered": "(отфильтровано по _MAX_ всего записей)",
 	"srf-ui-datatables-label-sInfoThousands": ",",
+	"srf-ui-datatables-label-sLengthMenu": "Показать _MENU_ записей",
 	"srf-ui-datatables-label-sLoadingRecords": "Загрузка…",
 	"srf-ui-datatables-label-sProcessing": "Обработка…",
 	"srf-ui-datatables-label-sSearch": "Поиск:",
@@ -144,26 +208,68 @@
 	"srf-ui-datatables-label-oAria-sSortAscending": ":активировать для сортировки столбца по возрастанию",
 	"srf-ui-datatables-label-oAria-sSortDescending": ":активировать для сортировки столбца по убыванию",
 	"srf_printername_tree": "Дерево",
-	"srf-rootinvalid": "«$1» не является корректным заголовком страницы.",
+	"srf_printername_ultree": "Ultree",
+	"srf_printername_oltree": "Oltree",
+	"srf-noparentprop": "Не указано родительского свойства. Дерево не может быть построено без указания родительского свойства.",
+	"srf-rootinvalid": "«$1» — некорректный заголовок страницы.",
+	"srf-paramdesc-parent": "Свойство, которое содержит родительскую страницу",
 	"srf-paramdesc-root": "Корневая страниа дерева",
+	"srf-paramdesc-startlevel": "Начальный уровень дерева, напр. Для интегрирования его в другое дерево",
 	"srf-printername-slideshow": "Слайд-шоу",
 	"srf-paramdesc-delay": "Задержка между слайдами (в секундах)",
 	"srf-paramdesc-navigation-controls": "Показать ли элементы управления",
 	"srf-paramdesc-effect": "Эффект, используемый при переходе между слайдами",
+	"srf-printername-filtered": "Отфильтровано",
+	"srf-paramdesc-filtered-views": "Вид, который будет доступен в результатах.",
+	"srf-paramdesc-filtered-filter-position": "Позиция фильтров относительно просмотров. Допустимые значения: «вверху», «внизу». По умолчанию: «вверху».",
+	"srf-paramdesc-filtered-list-type": "Тип списка. Допустимые значения: «list», «ul», «ol». По умолчанию: «list».",
+	"srf-paramdesc-filtered-list-template": "Шаблон с помощью которого будет формироваться список элементов.",
+	"srf-paramdesc-filtered-list-named-args": "Названия аргументов, передаваемых шаблоном.",
+	"srf-paramdesc-filtered-list-introtemplate": "Название шаблона, который будет показан перед результатами запроса, если они есть.",
+	"srf-paramdesc-filtered-list-outrotemplate": "Название шаблона, который будет показан после результатов запроса, если они есть.",
+	"srf-paramdesc-filtered-calendar-start": "Распечатка содержит дату начала события",
+	"srf-paramdesc-filtered-calendar-end": "Распечатка содержит дату окончания события",
+	"srf-paramdesc-filtered-calendar-title": "Распечатка содержит название события. Не может быть использовано вместе с шаблоном заголовка.",
+	"srf-paramdesc-filtered-calendar-title-template": "Шаблон, используемый для форматирования названия события в календаре",
 	"srf-filtered-selectorlabel-list": "Список",
 	"srf-filtered-selectorlabel-calendar": "Календарь",
+	"srf-printername-d3chart": "D3-диаграма",
+	"srf-printername-timeseries": "Диаграмма временных рядов",
+	"srf-paramdesc-group": "Серии сгруппированы по",
 	"srf-paramdesc-zoom": "Включить масштабирование",
+	"srf-paramdesc-datatable": "Включить базу данных",
+	"srf-timeseries-zoom-out-of-range": "Диапазон увеличения не предоставил достаточно данных",
+	"srf-printername-sparkline": "Мини-диаграмма",
+	"srf-printername-listwidget": "Виджет списка",
+	"srf-paramdesc-listtype": "Укажите тип списка",
 	"srf-paramdesc-widget": "Доступные виджеты",
+	"srf-paramdesc-pageitems": "Элементов на страницу",
 	"srf-printername-eventcalendar": "Календарь событий",
+	"srf-paramdesc-calendarfirstday": "Первый день недели",
+	"srf-paramdesc-calendardefaultview": "Вид при открытии календаря",
+	"srf-paramdesc-calendarstart": "Первоначальное начало календаря (значение даты или даты и времени)",
+	"srf-paramdesc-calendarlegend": "Указывает положение легенды и параметры назначенного фильтра",
+	"srf-paramdesc-dayview": "Разрешить просмотр дня при нажатии на его номер",
 	"srf-ui-eventcalendar-label-today": "Сегодня",
 	"srf-ui-eventcalendar-label-month": "Месяц",
 	"srf-ui-eventcalendar-label-week": "Неделя",
 	"srf-ui-eventcalendar-label-day": "День",
 	"srf-ui-eventcalendar-label-allday": "Весь день",
+	"srf-ui-eventcalendar-label-update-success": "Обновление событий календаря успешно выполнено.",
 	"srf-ui-eventcalendar-label-update-error": "Не удалось обновить календарь событий.",
+	"srf-printername-dygraphs": "Диграфы",
+	"srf-paramdesc-datasource": "Источник, из которого доступны данные. Допустимые значения: «file», «raw» и «url». По умолчанию: «file».",
+	"srf-paramdesc-errorbar": "Величина ошибок, которые будут использоваться. Допустимые значения: \"fraction\" (доверительные интервалы для значений), \"sigma\" (стандартное отклонение значений) и \"range\" (диапазоны значений)",
+	"srf-paramdesc-movingaverage": "Отобразить среднее течение целого ряда дней, (ноль будет указывать не скользящее среднее)",
+	"srf-paramdesc-yaxislabel": "Описание для оси y",
+	"srf-paramdesc-xaxislabel": "Описание для оси x",
+	"srf-paramdesc-unit": "Единица",
+	"srf-printername-pagewidget": "Виджет страница",
+	"srf-printername-incoming": "Входящие свойства",
 	"srf-paramdesc-min": "Минимальное или пороговое значение",
+	"srf-paramdesc-excludeproperty": "Исключить свойство из набора результатов",
 	"srf-printername-media": "Медиа-проигрыватель",
-	"srf-paramdesc-mediainspector": "Показывать детальную информацию об указанном медиа-элементе",
+	"srf-paramdesc-mediainspector": "Показывать детальную информацию об указанном элементе медиа",
 	"srf-ui-mediaplayer-label-previous": "Назад",
 	"srf-ui-mediaplayer-label-play": "Воспроизвести",
 	"srf-ui-mediaplayer-label-pause": "Пауза",
@@ -172,6 +278,8 @@
 	"srf-ui-mediaplayer-label-mute": "Без звука",
 	"srf-ui-mediaplayer-label-unmute": "Включить звук",
 	"srf-ui-mediaplayer-label-volume-max": "Максимальная громкость",
+	"srf-ui-mediaplayer-label-shuffle": "Перемешивание",
+	"srf-ui-mediaplayer-label-shuffle-off": "Перемешивание выключено",
 	"srf-ui-mediaplayer-label-repeat": "Повторять",
 	"srf-ui-mediaplayer-label-repeat-off": "Повторение выкл",
 	"srf-ui-mediaplayer-label-full-screen": "На весь экран",
