--- a/extensions/SemanticResultFormats/i18n/sr-ec.json
+++ b/extensions/SemanticResultFormats/i18n/sr-ec.json
@@ -2,9 +2,12 @@
 	"@metadata": {
 		"authors": [
 			"Rancher",
-			"Михајло Анђелковић"
+			"Михајло Анђелковић",
+			"Milicevic01",
+			"Сербијана"
 		]
 	},
+	"srf-ui-common-label-refresh": "Освежи",
 	"srfc_previousmonth": "Претходни месец",
 	"srfc_nextmonth": "Следећи месец",
 	"srfc_today": "Данас",
@@ -18,5 +21,6 @@
 	"srf_printername_average": "Средња вредност бројева",
 	"srf_printername_max": "Највећи број",
 	"srf_printername_min": "Најмањи број",
-	"srf_printername_gallery": "Галерија"
+	"srf_printername_gallery": "Галерија",
+	"srf-filtered-selectorlabel-table": "Табела"
 }
