--- a/extensions/SemanticResultFormats/i18n/sv.json
+++ b/extensions/SemanticResultFormats/i18n/sv.json
@@ -7,7 +7,8 @@
 			"Per",
 			"Rotsee",
 			"WikiPhoenix",
-			"Lokal Profil"
+			"Lokal Profil",
+			"Freked"
 		]
 	},
 	"srf-desc": "Extra resultatformat för Semantic MediaWiki-frågor",
@@ -25,9 +26,11 @@
 	"srf-ui-navigation-next": "Nästa",
 	"srf-ui-common-label-source": "Källa",
 	"srf-ui-common-label-datasource": "Datakälla",
+	"srf-ui-common-label-request-object": "begär objekt",
 	"srf-ui-common-label-help-section": "hjälpavsnitt",
 	"srf-ui-tooltip-title-options": "Alternativ",
 	"srf-ui-tooltip-title-legend": "Teckenförklaring",
+	"srf-ui-tooltip-title-filter": "Filter",
 	"srf-ui-common-label-refresh": "Uppdatera",
 	"srf-ui-common-label-parameters": "Parametrar",
 	"srf-ui-common-label-daterange": "Datumintervall",
@@ -128,7 +131,7 @@
 	"srf-gallery-navigation-next": "Nästa",
 	"srf-gallery-overlay-count": "Bild $1 av $2",
 	"srf-gallery-image-url-error": "Bilden hittades inte",
-	"srf_printername_tagcloud": "Tag cloud",
+	"srf_printername_tagcloud": "Taggmoln",
 	"srf_paramdesc_includesubject": "Ämnestexterna inkluderas",
 	"srf_paramdesc_increase": "Hur man ökar storleken på orden",
 	"srf_paramdesc_tagorder": "Ordens ordning",
@@ -161,6 +164,7 @@
 	"srf_paramdesc_graphcolor": "Diagramfärg",
 	"srf-paramdesc-graph-wwl": "Maximal längd för textlinje (i # bokstäver)",
 	"srf-printername-datatables": "Datatabeller",
+	"srf-ui-datatables-label-conditions": "Villkor",
 	"srf-ui-datatables-label-parameters": "Parametrar",
 	"srf-ui-datatables-label-information": "Information",
 	"srf-ui-datatables-label-update-success": "Tabellen uppdaterades",
@@ -174,6 +178,8 @@
 	"srf-ui-datatables-label-sLoadingRecords": "Läser in...",
 	"srf-ui-datatables-label-sProcessing": "Bearbetar...",
 	"srf-ui-datatables-label-sSearch": "Sök:",
+	"srf-ui-datatables-label-oPaginate-sFirst": "Första",
+	"srf-ui-datatables-label-oPaginate-sLast": "Sista",
 	"srf-ui-datatables-label-oPaginate-sNext": "Nästa",
 	"srf-ui-datatables-label-oPaginate-sPrevious": "Föregående",
 	"srf_printername_tree": "Tree",
@@ -187,7 +193,10 @@
 	"srf-paramdesc-navigation-controls": "Visa navigeringsknappar eller inte",
 	"srf-paramdesc-effect": "Vilken effekt som ska visas när bilden byts",
 	"srf-printername-filtered": "Filtrerad",
+	"srf-paramdesc-filtered-list-named-args": "Namnge de argument som skickas till mallen.",
+	"srf-paramdesc-filtered-calendar-title-template": "En mall som används för att formatera evenemangets rubrik i kalendern",
 	"srf-filtered-selectorlabel-list": "Lista",
+	"srf-filtered-selectorlabel-table": "Tabell",
 	"srf-filtered-selectorlabel-calendar": "Kalender",
 	"srf-printername-d3chart": "D3 diagram",
 	"srf-printername-timeseries": "Tidsserie diagram",
@@ -221,5 +230,15 @@
 	"srf-printername-incoming": "Ingående egenskaper",
 	"srf-paramdesc-min": "Minsta värde eller tröskelvärdet",
 	"srf-paramdesc-excludeproperty": "Uteslut egenskap från resultatet",
+	"srf-ui-mediaplayer-label-previous": "Föregående",
+	"srf-ui-mediaplayer-label-play": "Spela upp",
+	"srf-ui-mediaplayer-label-pause": "Pausa",
+	"srf-ui-mediaplayer-label-next": "Nästa",
+	"srf-ui-mediaplayer-label-stop": "Stopp",
+	"srf-ui-mediaplayer-label-mute": "Ljud av",
+	"srf-ui-mediaplayer-label-unmute": "Ljud på",
+	"srf-ui-mediaplayer-label-shuffle": "Blanda",
+	"srf-ui-mediaplayer-label-repeat": "Upprepa",
+	"srf-ui-mediaplayer-label-full-screen": "Fullskärm",
 	"srf-excel-link": "Excel"
 }
