--- a/extensions/SemanticResultFormats/i18n/zh-hans.json
+++ b/extensions/SemanticResultFormats/i18n/zh-hans.json
@@ -7,33 +7,38 @@
 			"Shirayuki",
 			"Liuxinyu970226",
 			"乌拉跨氪",
-			"Hudafu"
+			"Hudafu",
+			"Fengchao",
+			"Yfdyh000"
 		]
 	},
 	"srf-desc": "用于Semantic MediaWiki的附加结果格式",
 	"srf-name": "语义结果格式",
 	"prefs-srf": "语义结果格式",
 	"srf-prefs-intro-text": "您已安装语义结果格式拓展。额外帮助请参见[https://www.semantic-mediawiki.org/wiki/Help:Result_formats 此拓展的帮助页]。",
-	"prefs-srf-eventcalendar-options": "{{INT:Srf-printername-eventcalendar}}选项",
+	"prefs-srf-eventcalendar-options": "事件日历选项",
 	"srf-prefs-eventcalendar-options-update-default": "在页面刷新时启用日历活动的[https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates 自动更新]",
 	"srf-prefs-eventcalendar-options-paneview-default": "默认启用窗格视图",
-	"prefs-srf-datatables-options": "{{INT:srf-printername-datatables}}选项",
+	"prefs-srf-datatables-options": "数据表选项",
+	"srf-prefs-datatables-options-update-default": "在页面刷新时启用表格内容的[https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Automatic_updates 自动更新]",
 	"srf-prefs-datatables-options-cache-default": "启用[https://www.semantic-mediawiki.org/wiki/Help:User_preferences#Local_storage 本地存储]以改进响应时间",
 	"srf-module-loading": "载入中...",
 	"srf-paramdesc-layout": "可用布局",
-	"srf-paramdesc-height": "高",
-	"srf-paramdesc-width": "宽",
+	"srf-paramdesc-height": "高度",
+	"srf-paramdesc-width": "宽度",
+	"srf-paramdesc-class": "指定附加的层叠式样式表类",
 	"srf-module-nomatch": "找不到匹配项目",
 	"srf-paramdesc-charttype": "可用图表类型",
 	"srf-navigation-previous": "上一页",
-	"srf-ui-navigation-prev": "上",
-	"srf-ui-navigation-next": "下一步",
+	"srf-ui-navigation-prev": "上一页",
+	"srf-ui-navigation-next": "下一页",
 	"srf-ui-common-label-source": "来源",
 	"srf-ui-common-label-datasource": "数据源",
+	"srf-ui-common-label-ajax-error": "服务器报告对此$1的通信失败。请尝试刷新页面或查阅$2获取帮助。",
 	"srf-ui-common-label-request-object": "请求对象",
 	"srf-ui-common-label-help-section": "帮助部分",
 	"srf-ui-tooltip-title-options": "选项",
-	"srf-ui-tooltip-title-scope": "分数",
+	"srf-ui-tooltip-title-scope": "适用范围",
 	"srf-ui-tooltip-title-legend": "图例",
 	"srf-ui-tooltip-title-filter": "过滤器",
 	"srf-ui-common-label-refresh": "刷新",
@@ -43,15 +48,19 @@
 	"srf-ui-common-label-daterange": "日期范围",
 	"srf-ui-widgets-label-parameter-limit": "限制参数",
 	"srf-error-option-mix": "选项（$1）不可用",
-	"srf-error-missing-layout": "丢失布局",
+	"srf-error-option-link-all": "选项（$1）需要参数\"link\"设置为\"all\"",
+	"srf-error-missing-layout": "无法显示图表，因为布局丢失。",
+	"srf-error-jqplot-stackseries-data-length": "无法显示图表，因为不是所有行都有相同的元素数量。",
 	"srf-warn-empy-chart": "由于丢失数据，该图表或曲线图是空的",
 	"srfc_previousmonth": "上月",
 	"srfc_nextmonth": "下月",
 	"srfc_today": "今天",
 	"srfc_gotomonth": "跳至月份",
 	"srf_printername_calendar": "月历",
-	"srf_paramdesc_calendarlang": "显示日历的语言代码",
+	"srf_paramdesc_calendarlang": "日历显示语言的代码",
 	"srf_paramdesc_calendarcolors": "每个日期属性的显示颜色（示例：\"Start date=>green,End date=>#09c\"）",
+	"srf-paramdesc-calendar-startmonth": "月，日历显示初始化为（默认为当前月）",
+	"srf-paramdesc-calendar-startyear": "年，日历显示初始化为（默认为当前年）",
 	"srf_printername_vcard": "vCard导出",
 	"srf_printername_icalendar": "iCalendar导出",
 	"srf_paramdesc_icalendartitle": "日历文件的标题",
@@ -93,13 +102,31 @@
 	"srf_paramdesc_bardirection": "指定图纸的方向",
 	"srf-paramdesc-direction": "指定图纸或图表的方向",
 	"srf_paramdesc_barnumbersaxislabel": "数字轴标签",
+	"srf-paramdesc-labelaxislabel": "标签轴的标签",
+	"srf-paramdesc-ticklabels": "启用勾选标签的显示",
 	"srf-paramdesc-minvalue": "Y-轴上所要显示的最小值",
 	"srf-paramdesc-pointlabels": "显示图纸中的数据点",
 	"srf-paramdesc-chartlegend": "图表图例位置",
 	"srf-paramdesc-datalabels": "图纸/图表数据标签",
 	"srf-paramdesc-charttext": "描述性图表文本",
 	"srf-paramdesc-chartclass": "额外CSS类",
+	"srf-paramdesc-renderer": "选择图形/图表渲染器",
+	"srf-paramdesc-filling": "具体填充选项",
+	"srf-paramdesc-theme": "选择网格主题",
+	"srf-paramdesc-chartcolor": "指定具体图表颜色",
 	"srf-paramdesc-colorscheme": "选择配色方案",
+	"srf-paramdesc-valueformat": "指定取值的格式编排规则",
+	"srf-paramdesc-highlighter": "显示数据点高亮参数",
+	"srf-paramdesc-smoothlines": "在折线图上应用平滑算法",
+	"srf-paramdesc-stackseries": "将图表显示为堆叠系列",
+	"srf-paramdesc-seriesgroup": "选择系列分组",
+	"srf-paramdesc-serieslabel": "确定系列标签",
+	"srf-paramdesc-grouplabel": "确定分组标签",
+	"srf-paramdesc-chartcursor": "图表光标显示选项",
+	"srf-paramdesc-trendline": "启用图表及其趋势线的同时显示",
+	"srf-paramdesc-gridview": "同时显示图表和数据集。允许取值：\"none\"和\"tabs\"。默认值：\"none\"",
+	"srf-paramdesc-paneview": "指定面板内含的小折线图的位置。允许取值：\"bottom\"、\"top\"和\"none\"。默认值：\"bottom\"",
+	"srf-paramdesc-infotext": "在相应的信息选项卡上显示附加信息",
 	"srf-ui-gridview-label-item": "数据项",
 	"srf-ui-gridview-label-value": "数据值",
 	"srf-ui-gridview-label-series": "数据系列",
@@ -114,6 +141,9 @@
 	"srf_paramdesc_fileextensions": "当使用文件名作为标题，同时也显示文件扩展名",
 	"srf_paramdesc_captionproperty": "存在于所查询页面上的某个语义属性的名称要用作标题",
 	"srf_paramdesc_imageproperty": "所查询页面上某一指向所要使用的图像的语义属性的名称。当设置时，所查询页面本身将不会显示为图像。",
+	"srf-paramdesc-redirects": "出现在查询所获得的含有重定向目标的页面之上的语义属性的名称",
+	"srf-paramdesc-navigation": "布局导航控制",
+	"srf-paramdesc-overlay": "启用图片覆盖",
 	"srf-gallery-navigation-previous": "上一步",
 	"srf-gallery-navigation-next": "下一步",
 	"srf-gallery-overlay-count": "$2的图像$1",
@@ -153,10 +183,13 @@
 	"srf-printername-datatables": "数据表",
 	"srf-ui-datatables-label-conditions": "条件",
 	"srf-ui-datatables-label-parameters": "参数",
+	"srf-ui-datatables-label-filters": "列筛选器与搜索",
 	"srf-ui-datatables-label-information": "信息",
+	"srf-ui-datatables-panel-disclaimer": "参数和条件是可以改变的，但任何改变都是暂时的，且在页面刷新之后将会被放弃。",
 	"srf-ui-datatables-label-update-success": "图标更新成功",
 	"srf-ui-datatables-label-update-error": "图标更新失败。",
-	"srf-ui-datatables-label-placeholder-column-search": "搜索中...",
+	"srf-ui-datatables-label-placeholder-column-search": "搜索中……",
+	"srf-ui-datatables-label-content-cache": "内容从本地缓存中得到。",
 	"srf-ui-datatables-label-content-server": "内容从服务器得到。",
 	"srf-ui-datatables-label-multiselect-column-header": "可用阵列",
 	"srf-ui-datatables-label-multiselect-column-noneselectedtext": "过滤器设置",
@@ -164,15 +197,19 @@
 	"srf-ui-datatables-label-sEmptyTable": "表中无可用数据",
 	"srf-ui-datatables-label-sInfo": "显示_TOTAL_的记录，从_START_至_END_",
 	"srf-ui-datatables-label-sInfoEmpty": "显示0的记录，从0至0",
+	"srf-ui-datatables-label-sInfoFiltered": "（从_MAX_总记录中筛选）",
 	"srf-ui-datatables-label-sInfoThousands": "，",
 	"srf-ui-datatables-label-sLengthMenu": "显示_MENU_记录",
-	"srf-ui-datatables-label-sLoadingRecords": "正在载入…",
+	"srf-ui-datatables-label-sLoadingRecords": "正在载入……",
 	"srf-ui-datatables-label-sProcessing": "处理中...",
 	"srf-ui-datatables-label-sSearch": "搜索：",
+	"srf-ui-datatables-label-sZeroRecords": "未找到匹配记录",
 	"srf-ui-datatables-label-oPaginate-sFirst": "首",
 	"srf-ui-datatables-label-oPaginate-sLast": "上",
 	"srf-ui-datatables-label-oPaginate-sNext": "下",
 	"srf-ui-datatables-label-oPaginate-sPrevious": "上一页",
+	"srf-ui-datatables-label-oAria-sSortAscending": "： 启用按升序进行列排序",
+	"srf-ui-datatables-label-oAria-sSortDescending": "启用按降序进行列排序",
 	"srf_printername_tree": "树",
 	"srf_printername_ultree": "Ultree",
 	"srf_printername_oltree": "Oltree",
@@ -180,28 +217,63 @@
 	"srf-rootinvalid": "$1不是有效的页面标题。",
 	"srf-paramdesc-parent": "包含父页面的属性",
 	"srf-paramdesc-root": "树的根页面",
+	"srf-paramdesc-startlevel": "树状结构的起始级别，例如，将其整合到另一树状结构之中",
 	"srf-printername-slideshow": "幻灯片",
+	"srf-paramdesc-delay": "幻灯片之间的延迟时间（以秒为单位）",
+	"srf-paramdesc-navigation-controls": "是否显示导航控制",
+	"srf-paramdesc-effect": "所要采用的幻灯片切换效果",
 	"srf-printername-filtered": "已过滤",
+	"srf-paramdesc-filtered-views": "结果显示之中应当提供的视图。",
+	"srf-paramdesc-filtered-filter-position": "视图相关筛选器的位置。允许取值：\"顶部\"，\"底部\"。默认值：\"顶部\"。",
 	"srf-paramdesc-filtered-list-type": "列表的类型。允许的值：“list”、“ul”、“ol”。默认值：“list”。",
+	"srf-paramdesc-filtered-list-template": "用于列表项格式编排的模板。",
+	"srf-paramdesc-filtered-list-named-args": "请指定传递给该模板的变量",
+	"srf-paramdesc-filtered-list-introtemplate": "查询结果前面所要显示模板的名称（如果有的话）",
+	"srf-paramdesc-filtered-list-outrotemplate": "查询结果后面所要显示模板的名称（如果有的话）",
+	"srf-paramdesc-filtered-calendar-start": "包含事件开始日期的打印输出",
+	"srf-paramdesc-filtered-calendar-end": "包含事件结束日期的打印输出",
+	"srf-paramdesc-filtered-calendar-title": "包含事件标题的打印输出。不能与标题模板一起使用。",
+	"srf-paramdesc-filtered-calendar-title-template": "用于日历之中事件标题格式编排的模板",
 	"srf-filtered-selectorlabel-list": "列表",
+	"srf-filtered-selectorlabel-table": "表格",
 	"srf-filtered-selectorlabel-calendar": "日历",
 	"srf-printername-d3chart": "D3图表",
 	"srf-printername-timeseries": "时间序列图表",
+	"srf-paramdesc-group": "按系列分组",
 	"srf-paramdesc-zoom": "启用缩放",
 	"srf-paramdesc-datatable": "启用数据表",
+	"srf-timeseries-zoom-out-of-range": "该缩放范围并未产生任何足够的数据",
 	"srf-printername-sparkline": "Sparkline图表",
 	"srf-printername-listwidget": "列表小工具",
+	"srf-paramdesc-listtype": "指定列表类型",
 	"srf-paramdesc-widget": "可用组件",
 	"srf-paramdesc-pageitems": "项每页",
 	"srf-printername-eventcalendar": "事件日历",
+	"srf-paramdesc-calendarfirstday": "作为每星期开始的第一天",
+	"srf-paramdesc-calendardefaultview": "日历加载时的初始视图",
+	"srf-paramdesc-calendarstart": "日历初始起点 （日期型或日期时间型取值）",
+	"srf-paramdesc-calendarlegend": "指定图例位置以及所赋予的筛选器选项",
+	"srf-paramdesc-dayview": "点击天数启用日期查看",
 	"srf-ui-eventcalendar-label-today": "今天",
 	"srf-ui-eventcalendar-label-month": "月",
 	"srf-ui-eventcalendar-label-week": "周",
 	"srf-ui-eventcalendar-label-day": "日",
 	"srf-ui-eventcalendar-label-allday": "全天",
+	"srf-ui-eventcalendar-label-update-success": "活动日历成功更新。",
+	"srf-ui-eventcalendar-label-update-error": "活动日历更新失败。",
+	"srf-printername-dygraphs": "Dygraphs图表",
+	"srf-paramdesc-datasource": "可以访问的数据来源。允许取值：\"文件型\"、\"原始数据型\"和\"url型\"。默认值：\"文件型\"",
+	"srf-paramdesc-errorbar": "要使用的误差线。允许取值：\"fraction\"（取值的置信区间）、\"sigma\"(取值的标准偏差) 和\"range\"（自定义的取值范围）",
+	"srf-paramdesc-movingaverage": "显示若干天时间的均值 （零表示没有移动均值）",
+	"srf-paramdesc-yaxislabel": "Y轴上显示的说明",
+	"srf-paramdesc-xaxislabel": "X轴上显示的说明",
 	"srf-paramdesc-unit": "单位",
 	"srf-printername-pagewidget": "页面小部件",
+	"srf-printername-incoming": "连入属性",
+	"srf-paramdesc-min": "最小值或阀值",
+	"srf-paramdesc-excludeproperty": "从结果集中排除属性",
 	"srf-printername-media": "媒体播放器",
+	"srf-paramdesc-mediainspector": "显示关于指定媒体元素的详细信息",
 	"srf-ui-mediaplayer-label-previous": "上一个",
 	"srf-ui-mediaplayer-label-play": "播放",
 	"srf-ui-mediaplayer-label-pause": "暂停",
